--- a/UcasProjectManagement/UcasProWindowsForm/Forms/EmployeeForm/FrmContratsManage.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/EmployeeForm/FrmContratsManage.resx
@@ -135,62 +135,62 @@
   </data>
   <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUNSURBVEhLvZVtbFNVGMcrnwl+08SQmKhfFE384BdIJiEz
-        Q0RUlBFgIonxBf0iCUaFYFEJmBiiyyjIRoAAg23sres2igRqx8botq7ruvW9nWtLX27v7dq1W3v7cvr3
-        uXcdFYsmmug/+eXc3HvO/znnee45R/G/qlgs7mWM9ZfQ/AO0RC+A2pJVpci8JpvNhqnTv1Y+n3dT81TJ
-        sqxCsbiPPs4UiksdWbEIekcABSZBz38H9ZWGSv1pJcdLtmWJjDUum6tdMdR22/FerxN1PU5s73Jga4cN
-        W9pteO2qtYJX26youjSJDocgj88w1layLUvMM9VccoHmAjhiGXRREI17Dj1EtzOGTqLdHsNVu1BBG3F5
-        moddyIAWgkyOXS7ZlpWmAEJigeUpHVY+TWYCukrGsolNQKuVx+WH0Eyct0TlcVIWFnOsuWRb1nyWqaIU
-        QFpiN81eSs/HWg8+uObBnl4X6jQu7FA7sY3S9Wfe7nRgI6Wp07mUooXMwwKITBWMpVhCZIimC/Amspgh
-        pNYTF2XcEnOVuKQ2nsVcpgiexpLH2ZJtWbE0UwUoAPnTsqN4i4q6Q+1ALc1Qet5MxdzYNo3qK5Wsb55C
-        Tasd/UERkwlAM8t0h4EVJeslRSnADJ9kkUVGs87BGE7LjBNj4UWMEiMSoQcxEJZYHidvmnGwsQ22DNAR
-        AM55WWPJeknBhbzKE00ygZap9SZweNCPo3cCOEIoBwM4NODHAb0PX+hmH+C72340TXCoGwhAsVuJ/fVn
-        EKI66OLAKXPy0vFhvu5+ABeXZNxiEf3eeXxLpkeHg3KAb+j5azI6qPfjKwoicWDAByWxk9L3ZLMNq36J
-        Y4VGgOL9Y1CePAdaBHqcqcJFa/q6HMA3n1dNR+aZdz4PCy9C71+APpDCQGABv/pSMjri1mwSN4lh+mYM
-        pvDpCI9VmhAeVd/DM7oEVmrnoNilxKGGJhiEonIgVlwnB5iJ51VTwXkWTDGcMVORO23YTkV+h4r8Bu3g
-        TfQb1rRO45UrFqy/YscL5+1Y0+HGyp4gHusL4yWdgKevhbCij1bRNIXnd+7/UjZelieeVZkCcWYTcrBE
-        szAE07grs4hhiXtLjEWyGJnlsV07BUU7hye0EVTfiePFWzwUVN1VHT58pvf1lmzLsseyKmMgwTwJhrOT
-        PHbRGbSn14PdGjd2dDvllbzZ4cCGDj9+7O6CeagB1cMxrDXkUTVIaWn345EWL44ZOYgiu1CyLctKAQy+
-        OJvic9DOJPHzRBRNZh6nJ3icMkWhGudwwiRAORRB8yUlHVgnEOMnsGcyBUWngMe7Z9FAEwvEc7TpcpU7
-        2SJkVcOzc2yC0tPnTcqGkvFJE4cGYwT1o2GcsKZxqGUAH9ZuQNTwAxBshcl4gf6iQaxpduGGOwHnXAFm
-        LlN52Jk4sXGcy2KKL5BpVN7BO9Uu1FKht9JZ8zoVecv1KJ5793OsXv0stm1+GeaWj+DW/4QjfXqsb3Gj
-        3hjFtJCHOZKpPK5tgrjPyIkzg4EMRkNZGKmYUkHlNizCvgjoHSGsW1uFqupN+ERZD7VhEoORAm7Tzpqk
-        yY1SvwEaP8llKi8cSTYhUzN0LxM2hETZ+I9IAdR3LPj+9EXccHCw0pFgoN16N1LEOJeDiQLcpXEjoQW3
-        M5GpvDKXZeFze0fC6X4JQyitWWaMy2l0bk5jEtKa3+iSt6aYZiySu//dEBa1o8F0L/0sf33p/zdSKH4H
-        jVrFeOUl9wAAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABQ1JREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
+        RoVgUQmYGKLLKMhGgACDbeyt6zaKBGrHxui2ruu69b2da0tfbu/t2rVbe/ty+ve5dx0Viyaa6D/55dzc
+        e87/Oed57jlH8b+qWCzuZYz1l9D8A7REL4DaklWlyLwmm82GqdO/Vj6fd1PzVMmyrEKxuI8+zhSKSx1Z
+        sQh6RwAFJkHPfwf1lYZK/Wklx0u2ZYmMNS6bq10x1Hbb8V6vE3U9TmzvcmBrhw1b2m147aq1glfbrKi6
+        NIkOhyCPzzDWVrItS8wz1VxygeYCOGIZdFEQjXsOPUS3M4ZOot0ew1W7UEEbcXmah13IgBaCTI5dLtmW
+        laYAQmKB5SkdVj5NZgK6SsayiU1Aq5XH5YfQTJy3ROVxUhYWc6y5ZFvWfJapohRAWmI3zV5Kz8daDz64
+        5sGeXhfqNC7sUDuxjdL1Z97udGAjpanTuZSihczDAohMFYylWEJkiKYL8CaymCGk1hMXZdwSc5W4pDae
+        xVymCJ7GksfZkm1ZsTRTBSgA+dOyo3iLirpD7UAtzVB63kzF3Ng2jeorlaxvnkJNqx39QRGTCUAzy3SH
+        gRUl6yVFKcAMn2SRRUazzsEYTsuME2PhRYwSIxKhBzEQllgeJ2+acbCxDbYM0BEAznlZY8l6ScGFvMoT
+        TTKBlqn1JnB40I+jdwI4QigHAzg04McBvQ9f6GYf4LvbfjRNcKgbCECxW4n99WcQojro4sApc/LS8WG+
+        7n4AF5dk3GIR/d55fEumR4eDcoBv6PlrMjqo9+MrCiJxYMAHJbGT0vdksw2rfoljhUaA4v1jUJ48B1oE
+        epypwkVr+rocwDefV01H5pl3Pg8LL0LvX4A+kMJAYAG/+lIyOuLWbBI3iWH6Zgym8OkIj1WaEB5V38Mz
+        ugRWaueg2KXEoYYmGISiciBWXCcHmInnVVPBeRZMMZwxU5E7bdhORX6HivwG7eBN9BvWtE7jlSsWrL9i
+        xwvn7VjT4cbKniAe6wvjJZ2Ap6+FsKKPVtE0hed37v9SNl6WJ55VmQJxZhNysESzMATTuCuziGGJe0uM
+        RbIYmeWxXTsFRTuHJ7QRVN+J48VbPBRU3VUdPnym9/WWbMuyx7IqYyDBPAmGs5M8dtEZtKfXg90aN3Z0
+        O+WVvNnhwIYOP37s7oJ5qAHVwzGsNeRRNUhpaffjkRYvjhk5iCK7ULIty0oBDL44m+Jz0M4k8fNEFE1m
+        HqcneJwyRaEa53DCJEA5FEHzJSUdWCcQ4yewZzIFRaeAx7tn0UATC8RztOlylTvZImRVw7NzbILS0+dN
+        yoaS8UkThwZjBPWjYZywpnGoZQAf1m5A1PADEGyFyXiB/qJBrGl24YY7AedcAWYuU3nYmTixcZzLYoov
+        kGlU3sE71S7UUqG30lnzOhV5y/Uonnv3c6xe/Sy2bX4Z5paP4Nb/hCN9eqxvcaPeGMW0kIc5kqk8rm2C
+        uM/IiTODgQxGQ1kYqZhSQeU2LMK+COgdIaxbW4Wq6k34RFkPtWESg5ECbtPOmqTJjVK/ARo/yWUqLxxJ
+        NiFTM3QvEzaERNn4j0gB1Hcs+P70RdxwcLDSkWCg3Xo3UsQ4l4OJAtylcSOhBbczkam8Mpdl4XN7R8Lp
+        fglDKK1ZZozLaXRuTmMS0prf6JK3pphmLJK7/90QFrWjwXQv/Sx/fen/N1IofgeNWsV45SX3AAAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYYSURBVEhLjVZ7TFN3GGVuyvCJ+IqPqVOmJot7mJmoMyom
-        4mu6Mdyiskynzvliakw2jDrfStyUJU6XATpFeqniCyi0UkBLQQuF0hZKS1tKWyogL7GCMtGdnVv5Y0w0
-        +5Ivub23v3O+73zfua1fd7Fz585Jqtv5UGs07ZmZmV4FM02h8AqyNK8gCF4J8/e42I4EQdIhk8lmdR77
-        fxEdHT0zNjZWYqt2w9nUAIvbDaPdhsLSUqi0BVCobuGaPAO/nY1H5s0cFBYXY2NkZGjn8VfGa1FRUYOU
-        SqUmLTsLBSU6mF1OlBJcZzFDYzRArS1EpjoXMj4/I0lERlYWxNDx2e7du5d14rw8kqTSmpQbCiReToam
-        pITVu6C3WlBkKmMHRuQXFyE7Pw9ZJLl4/RrkOdk+gkcdT1DIgkiyshOq+/gjPj5dmnIdkuRkXwcWdmCq
-        tMPsqGQ6UGqzQkcykTxFIYcyV+Uj6GC2429o9XrsPXBgTSfci/FLTMxGmVKJc4Lg09bqrILRbIaO+utN
-        JmYZtEY9tAYDcvLycOv2bbQ97cD9R21oefwI95qbkaNWY+/+/ds6IbsGW5x8LV2GC5cuoqCgAFZWbKQ0
-        OlasN+ihNxqh52d9mUhYxi27g3RlJsQzl1NTkERp/xQkiE1KehAZGenfCds1zkullUlXr6Lwzh1YyspQ
-        zgGa2YGZoGaCWiwWWKwVMLGzEnEuBRpk56mRnqXEFVkakq5dhZAieF9K8Ft8vPQSv1RECSp0OugpgzY3
-        F0X0hY5bpBdTVwwjuymhVFp+J7+wADn5+STK862xkJH+coJ90dGrpDduoIAVmXmgVKVCKXUt1mpRSpns
-        lM3CYVrN5bDZbKiw21FWYekcvg553DQ5jdktQe28UMX2qdM00lxVq4FVm+RylDDzWF1rahqKvl6Nq2fi
-        4aqtRTmXwMzBW6xWlFMyI72iJ2kJyUT3v0BQtnDRDfdXa3Fu/IRn2+aHPrOwYrtcgXxulfXECTxZvhLu
-        yB2InTIVssQLcHB1TezIwllU0IxmrrOlqgo2TzUyNXe6Eqhmh+y2LgpD7aYd8G6NwvGhw7E1ZA4MdGoF
-        wWvmzEXlth/RcCEZdeu/R8r8RdRfDw+94Saop+Yuahob4Kyrhae5CZri4q4ECf2Ctld+thzOsBVwr9kE
-        7+Yd2BAYhFVTPkTV4iWwrtsMx8Fj8GyPwgMWcSp0Ea5clMIpblS5ybfOdprybkMD7v/VjmISLFiwoKtE
-        RwMHbbYt+BS2xeFwLF8N28pvcHLMeBjDV8C2ZQccq79DTXgEjs8KwbFj0bBxBq7ycjgpj5svRg+rr73f
-        jDa6ulsCMfb09F9fMT0EprkLYaJkbgLql36B0iXh8JA4ZsYsHPppDyppQjfXs5I+cHGLqqm7p67OR9Au
-        Elit3ROIsXPM2ETVlGnQfvQxNNNno3AGZzEjBD+8MwmH9+1DFberMucmLPSHnT6o4ha5XC64OYd7LS14
-        8ioC55Yti3dNfg9Xho7CrdHBUI55B9nMXOaGfv0RHRGBZhqsjj7wMOu4OfUEbmpqxP2HXjS1tuKpSGCz
-        vUhgjohYZvhkKTJHjUP6kFFIHTISyj5BSB04DKkkVA8fi+P9BuDUmjWoYuVOvp8cfIW4SFJd/VyixtaH
-        hCeB/T8E2WFh76vnzYd8+GhcJ2AGwRW9AxEzbgIu9w2CPHAoZMNGIYf3D/n1wNldu1DPoVZTnruUp0bU
-        n100tYkjFgnsXQkMM2b+nE9w2YAhUBOogiTHJ3+AmN9P48rab6Hw84N6wGBkDXsLt3sEICF4Agw02IPG
-        RjTW16P5QQtf2Y/Q3P64e4Kwnv7r6ijNPQI0stqDY4PzMmh3NDbhCdvWHz4Kz+ARcAcOQV2fgUgP/xK1
-        ba0+sO6CQ/cGBwd3ncG83n3X4u2J2N8r4JxfQMDIuNOnq6VxcdVCfJzjhCA4Ds4OdbW8/iZ+nTTp3sYj
-        R+znExKqBInEkShIHPyX4UshWXBcVyrrT546ZSbk8OfI/LFn9hQv3g0I+DzAz28EL3sz+4v3GK8zxeug
-        ib16hfv7+wfzug+zF1MM8fy/UwzxDDH83vgHUQIO/ScvcgYAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZW7K8In4io+pU6Ymi3uYmagzKibia7ox3KKyTKfO+WJq
+        TDaMOt9K3JQlTpcBOkV6qeILKLRSQEtBC4XSFkpLW0pbKiAvsYIy0Z2dW/ljTDT7ki+5vbe/c77vfN+5
+        rV93sXPnzkmq2/lQazTtmZmZXgUzTaHwCrI0ryAIXgnz97jYjgRB0iGTyWZ1Hvt/ER0dPTM2NlZiq3bD
+        2dQAi9sNo92GwtJSqLQFUKhu4Zo8A7+djUfmzRwUFhdjY2RkaOfxV8ZrUVFRg5RKpSYtOwsFJTqYXU6U
+        ElxnMUNjNECtLUSmOhcyPj8jSURGVhbE0PHZ7t27l3XivDySpNKalBsKJF5OhqakhNW7oLdaUGQqYwdG
+        5BcXITs/D1kkuXj9GuQ52T6CRx1PUMiCSLKyE6r7+CM+Pl2ach2S5GRfBxZ2YKq0w+yoZDpQarNCRzKR
+        PEUhhzJX5SPoYLbjb2j1euw9cGBNJ9yL8UtMzEaZUolzguDT1uqsgtFsho76600mZhm0Rj20BgNy8vJw
+        6/ZttD3twP1HbWh5/Aj3mpuRo1Zj7/792zohuwZbnHwtXYYLly6ioKAAVlZspDQ6Vqw36KE3GqHnZ32Z
+        SFjGLbuDdGUmxDOXU1OQRGn/FCSITUp6EBkZ6d8J2zXOS6WVSVevovDOHVjKylDOAZrZgZmgZoJaLBZY
+        rBUwsbMScS4FGmTnqZGepcQVWRqSrl2FkCJ4X0rwW3y89BK/VEQJKnQ66CmDNjcXRfSFjlukF1NXDCO7
+        KaFUWn4nv7AAOfn5JMrzrbGQkf5ygn3R0aukN26ggBWZeaBUpUIpdS3WalFKmeyUzcJhWs3lsNlsqLDb
+        UVZh6Ry+DnncNDmN2S1B7bxQxfap0zTSXFWrgVWb5HKUMPNYXWtqGoq+Xo2rZ+Lhqq1FOZfAzMFbrFaU
+        UzIjvaInaQnJRPe/QFC2cNEN91drcW78hGfb5oc+s7Biu1yBfG6V9cQJPFm+Eu7IHYidMhWyxAtwcHVN
+        7MjCWVTQjGaus6WqCjZPNTI1d7oSqGaH7LYuCkPtph3wbo3C8aHDsTVkDgx0agXBa+bMReW2H9FwIRl1
+        679HyvxF1F8PD73hJqin5i5qGhvgrKuFp7kJmuLirgQJ/YK2V362HM6wFXCv2QTv5h3YEBiEVVM+RNXi
+        JbCu2wzHwWPwbI/CAxZxKnQRrlyUwiluVLnJt852mvJuQwPu/9WOYhIsWLCgq0RHAwdtti34FLbF4XAs
+        Xw3bym9wcsx4GMNXwLZlBxyrv0NNeASOzwrBsWPRsHEGrvJyOCmPmy9GD6uvvd+MNrq6WwIx9vT0X18x
+        PQSmuQthomRuAuqXfoHSJeHwkDhmxiwc+mkPKmlCN9ezkj5wcYuqqbunrs5H0C4SWK3dE4ixc8zYRNWU
+        adB+9DE002ejcAZnMSMEP7wzCYf37UMVt6sy5yYs9IedPqjiFrlcLrg5h3stLXjyKgLnli2Ld01+D1eG
+        jsKt0cFQjnkH2cxc5oZ+/REdEYFmGqyOPvAw67g59QRuamrE/YdeNLW24qlIYLO9SGCOiFhm+GQpMkeN
+        Q/qQUUgdMhLKPkFIHTgMqSRUDx+L4/0G4NSaNahi5U6+nxx8hbhIUl39XKLG1oeEJ4H9PwTZYWHvq+fN
+        h3z4aFwnYAbBFb0DETNuAi73DYI8cChkw0Yhh/cP+fXA2V27UM+hVlOeu5SnRtSfXTS1iSMWCexdCQwz
+        Zv6cT3DZgCFQE6iCJMcnf4CY30/jytpvofDzg3rAYGQNewu3ewQgIXgCDDTYg8ZGNNbXo/lBC1/Zj9Dc
+        /rh7grCe/uvqKM09AjSy2oNjg/MyaHc0NuEJ29YfPgrP4BFwBw5BXZ+BSA//ErVtrT6w7oJD9wYHB3ed
+        wbzefdfi7YnY3yvgnF9AwMi406erpXFx1UJ8nOOEIDgOzg51tbz+Jn6dNOnexiNH7OcTEqoEicSRKEgc
+        /JfhSyFZcFxXKutPnjplJuTw58j8sWf2FC/eDQj4PMDPbwQvezP7i/cYrzPF66CJvXqF+/v7B/O6D7MX
+        Uwzx/L9TDPEMMfze+AdRAg79Jy9yBgAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="telerikMetroTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
