--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmSalariesManage.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmSalariesManage.resx
@@ -139,61 +139,61 @@
   <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABQxJREFUSEu9lVtsFFUYx1eeCb5pYkhM1BdFEx98gaQSUlNEREUpASqSGC/oiyQY
-        FYKLSsDEEG3KgrQECNDSlt6225ZFAnVLS9m223a77d663drudi+zM3vpZWdmL2f/fjPdsuKiiSb6T345
-        k5lz/t853zfnHM3/qlwut58x1pXH8A8wEh0AyvNWxSLzslQqFaJO/1qZTMZDzVN5y4KyudwB+jidzS13
-        ZLkc6B0BZJkCPf8d1FcZqvSnlZzM2xYkM1a9Yq6fjKK8zYn3OtyoaHdjZ6sL25sd2NbkwGvX7EW82mhH
-        yZUxNLsEdbzEWGPetiA5w3QLokxzAVxRCa0UxOCJoZ1oc0fRQjQ5o7jmFIpoJOomeDgFCbQQSGlWl7ct
-        SKQAiSWZZSgddl4kMwGteWPVxCGgwc6j7iHUEhdtEXWckoVkmtXmbQuaTzFdjAIoS2yj2Svp+dg4hQ+u
-        T2FfxyQqDJPYpXdjB6Xrz7zd4sJmSlOLezlFS9LDAshMx81LLEExImIW3kQK04TSTsVlFY9CrJhJpY2n
-        EJNy4GkseZzP2xYUFZkuRAGUNdTZI3iLirpL70I5zVB53krF3Nw4gdKrxWysHUdZgxNdARljCcAww7qP
-        Aqvy1suKUABfXGThJKNZp2EJiSrDxFAoiUFiQCH4IGbCFs3g9C0rDlc3wiEBzX7ggpdV562XFVjK6GZi
-        IhNomUZvAkd7fTh+149jhLbXjyM9PhwyzeKL7pkH+O6ODzWjHCp6/NDs1eJg5TkEqQ7dceCMdeHKyX6+
-        4n6AacoTl8yhyzuPb8n0eH9ADfANPX9NRodNPnxFQRQO9cxCS+ym9D1Z68CaX+JYZRCgef8EtKcvgBaB
-        dq+UvWwXb6gBZuczOpeQZN75DGy8DJNvCSb/Inr8S/h1dlGlm7g9s4BbRD99swQW8ekAjzWGIB7Vz+GZ
-        7gRWG2PQ7NHiSFUNzEJO2xPNbVADTMczOieXZIFFhnNWKnKLAzupyO9Qkd+gHbyFfsOyhgm8ctWGjVed
-        eOGiE+uaPVjdHsBjnSG81C3g6etBrOqkVdSM4/ndB79UjVc0FU/pbKFF5hDSsEVSMAdE3FNJol9hbpmh
-        cAoDMzx2GsehaeLwhDGM0rtxvHibh4aqu6Z5Fp+ZZjvytgU5oymdNbTEphIM58d47KEzaF/HFPYaPNjV
-        5lZX8mazC5uaffixrRXWviqU9kex3pxBSS+lpcmHR+q9OGHhIMvsUt62IDsFoJyycT4N4/QCfh6NoMbK
-        4+wojzMjEeiGOZwaEaDtC6P2ipYOrFOI8qPYN7YITYuAx9tmUEUT88fTtOnSxTvZJqR0g3MLbJTS0+ld
-        UA0V49MjHKosYVQOhnDKLuJIfQ8+LN+EiPkHINCAEcsl+ot6sa52Ejc9CbhjWVg5qfiwG+Hk6mEuhXE+
-        S6YRdQfv1k+inAq9nc6a16nI225E8Ny7n2Pt2mexY+vLsNZ/BI/pJxzrNGFjvQeVlggmhAysYan4uHYI
-        8gELJ0/3+iUMBlOwUDGVgqptSIYzCZhcQWxYX4KS0i34RFsJvXkMveEs7tDOGqPJDVK/Hho/xknFF44i
-        hyCV9c1JIXNQVo3/iBJAf9eG789exk0XBzsdCWbarffCOQxzaYxQgHs0biC45HEnpOIrc0U2Pr1/ICR2
-        KZiDomGFIS5t6PZwhhFBNPxGl7x9kRmGwun7380h2TgYEDvoZ/nrS/+/kUbzO8Q3xih3xt46AAAAAElF
-        TkSuQmCC
+        wwAADsMBx2+oZAAABQ1JREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
+        RoVgUQmYGKLLKMhGgACDbeyt6zaKBGrHxui2ruu69b2da0tfbu/t2rVbe/ty+ve5dx0Viyaa6D/55dzc
+        e87/Oed57jlH8b+qWCzuZYz1l9D8A7REL4DaklWlyLwmm82GqdO/Vj6fd1PzVMmyrEKxuI8+zhSKSx1Z
+        sQh6RwAFJkHPfwf1lYZK/Wklx0u2ZYmMNS6bq10x1Hbb8V6vE3U9TmzvcmBrhw1b2m147aq1glfbrKi6
+        NIkOhyCPzzDWVrItS8wz1VxygeYCOGIZdFEQjXsOPUS3M4ZOot0ew1W7UEEbcXmah13IgBaCTI5dLtmW
+        laYAQmKB5SkdVj5NZgK6SsayiU1Aq5XH5YfQTJy3ROVxUhYWc6y5ZFvWfJapohRAWmI3zV5Kz8daDz64
+        5sGeXhfqNC7sUDuxjdL1Z97udGAjpanTuZSihczDAohMFYylWEJkiKYL8CaymCGk1hMXZdwSc5W4pDae
+        xVymCJ7GksfZkm1ZsTRTBSgA+dOyo3iLirpD7UAtzVB63kzF3Ng2jeorlaxvnkJNqx39QRGTCUAzy3SH
+        gRUl6yVFKcAMn2SRRUazzsEYTsuME2PhRYwSIxKhBzEQllgeJ2+acbCxDbYM0BEAznlZY8l6ScGFvMoT
+        TTKBlqn1JnB40I+jdwI4QigHAzg04McBvQ9f6GYf4LvbfjRNcKgbCECxW4n99WcQojro4sApc/LS8WG+
+        7n4AF5dk3GIR/d55fEumR4eDcoBv6PlrMjqo9+MrCiJxYMAHJbGT0vdksw2rfoljhUaA4v1jUJ48B1oE
+        epypwkVr+rocwDefV01H5pl3Pg8LL0LvX4A+kMJAYAG/+lIyOuLWbBI3iWH6Zgym8OkIj1WaEB5V38Mz
+        ugRWaueg2KXEoYYmGISiciBWXCcHmInnVVPBeRZMMZwxU5E7bdhORX6HivwG7eBN9BvWtE7jlSsWrL9i
+        xwvn7VjT4cbKniAe6wvjJZ2Ap6+FsKKPVtE0hed37v9SNl6WJ55VmQJxZhNysESzMATTuCuziGGJe0uM
+        RbIYmeWxXTsFRTuHJ7QRVN+J48VbPBRU3VUdPnym9/WWbMuyx7IqYyDBPAmGs5M8dtEZtKfXg90aN3Z0
+        O+WVvNnhwIYOP37s7oJ5qAHVwzGsNeRRNUhpaffjkRYvjhk5iCK7ULIty0oBDL44m+Jz0M4k8fNEFE1m
+        HqcneJwyRaEa53DCJEA5FEHzJSUdWCcQ4yewZzIFRaeAx7tn0UATC8RztOlylTvZImRVw7NzbILS0+dN
+        yoaS8UkThwZjBPWjYZywpnGoZQAf1m5A1PADEGyFyXiB/qJBrGl24YY7AedcAWYuU3nYmTixcZzLYoov
+        kGlU3sE71S7UUqG30lnzOhV5y/Uonnv3c6xe/Sy2bX4Z5paP4Nb/hCN9eqxvcaPeGMW0kIc5kqk8rm2C
+        uM/IiTODgQxGQ1kYqZhSQeU2LMK+COgdIaxbW4Wq6k34RFkPtWESg5ECbtPOmqTJjVK/ARo/yWUqLxxJ
+        NiFTM3QvEzaERNn4j0gB1Hcs+P70RdxwcLDSkWCg3Xo3UsQ4l4OJAtylcSOhBbczkam8Mpdl4XN7R8Lp
+        fglDKK1ZZozLaXRuTmMS0prf6JK3pphmLJK7/90QFrWjwXQv/Sx/fen/N1IofgeNWsV45SX3AAAAAABJ
+        RU5ErkJggg==
 </value>
   </data>
   <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABiNJREFUSEuNVntMk3cUZQ9l+EQ2NT6mbqIzWdzDzESdUTHxhXsx3OJk2Zzu5YOp
-        cdkw6nwrcVOWKC4D3JxCKaAgUGhtgVkKWigtXwulpS2lLRWQl1hBmejOzlf5Y0w0u8lNvj5+59x77rm/
-        NmCg2LFjxwz1lVJotNoepUrpUyiVvlyFwpcmy/VJpKm+FInE90tiQq8kPa1XJpMt6Dv2/yI2NnZ+QkJC
-        ir3BA1d7K6weD0wOO8qrqqDWlUGhvowseT5O/pYE5Z9FKNfrsSE6emnf8cfGEzExMc+qVCptbmEByioN
-        sLhdqCK4wWqB1mSERlcOpaYYMn5+OiUZ+QUFEMPAz3bt2rWqD+fRkSqVNmZfUiD5fAa0lZWs3g3BZkWF
-        uZodmFCqr0BhaQkKSJJ2MQvyokI/we3euyhnQSRZ0wc1cPyalJQnzb6IlIwMfwdWdmCuc8DirGM6UWW3
-        wUAykTxbIYeqWO0n6GX24G/oBAF79u9f1wf3cPwUF7dBplLhjETi19bmqofJYoGB+gtmM7MaOpMAndGI
-        opISXL5yBd33enHjdjc679zG9Y4OFGk02LNv39Y+yP7BFmdm5clwLj0NZWVlsLFiE6UxsGLBKEAwmSDw
-        tVAtElbTZVeRp1JCPHM+JxuplPZ3SQpOp6bejI6ODuyD7R9/SKV1qZmZKL96FdbqatRwgBZ2YCGohaBW
-        qxVWWy3M7KxSnEuZFoUlGuQVqHBBlovUrExIstN9jyQ4mZQkTeeXKihBrcEAgTLoiotRwb0w0EWCmAY9
-        TOymklLp+J3S8jIUlZaSqMRv4/T8vEcT7I2N/VR66RLKWJGFB6rUalRRV71OhyrK5KBsVg7TZqmB3W5H
-        rcOB6lpr3/ANKKHT5FzMAQmalixVbJs9RystVncZWbVZLkcls4TVdeXkouKTtcg8nQR3UxNqaAILB2+1
-        2VBDyUzcFYGklSRTFqgeJqheEX7J8/F6nJk6/f63K8PvW1mxQ65AKV1lO34cd1evgSd6OxJmzYYs+Ryc
-        tK6ZHVk5i1ouo4V2ttbXw+5tQIH2an8C9cKwXbbwCDRt3A7flhgcGzMOW8IWwchNrSV446LFqNv6PVrP
-        ZaD5y2+QvSyc+gvwcjc8BPU2XkNjWytczU3wdrRDq9f3Jzg7PGRb3Xur4Yr4CJ51G+HbtB1fB4fg01mv
-        o37l27B9vgnOA0fh3RaDmywifmk4LqRJ4RIdVWP229nBpbzW2oobf/VAT4Lly5f3l+hI8LOb7MvfhX1l
-        JJyr18K+5jOcmDwVpsiPYN+8Hc61X6ExMgrHFoTh6NFY2DkDd00NXJTHw4vRy+qbbnSgm1utNxofJhBj
-        96DAL2vnhsG8eAXMlMxDQOGdD1D1diS8JI6btwAHf9iNOi6hh/as4x646aIG6u5tbvYT9JDAYLMNTCDG
-        jslTktWz5kD3xpvQzl2I8nmcxbwwfDdtBg7t3Yt6uquu6E9YuR8O7kE9XeR2u+HhHK53duLu4whcmzev
-        3DnzFVwYMxGXJ4VCNXkaCpnFzK+Hj0BsVBQ6uGDN3AMvs5nOaSFwe3sbbtzyob2rC/dIUGm3P0xgiYpa
-        ZXzrHSgnvoi80RORM3oCVENDkDNqLHJIqBk3BceGj0T8unWoZ+Uu3k9OXiFukjQ0PJCoresW4QHB8R+C
-        woiIVzVLlkE+bhIuEjCf4IohwYh7cTrODwuBPHgMZGMnoojvHwx4Er/t3IkWDrWB8lyjPI2i/uyivVsc
-        MTtwOPoTGOfN/7GU4LKRo6EhUC1Jjs18DXG/nMKF9V9AERAAzcjnUDD2eVx5MghnQ6fDyAW72daGtpYW
-        dNzs5JV9Gx09dwYmiBgU+HkzpblOgDZWe2BKaEk+7xO0teMu2xYOHYH3ufHwBI9G89BRyIv8EE3dXX6w
-        gYKS+UJDQ/vPYMmQYevxwkvYNzjoTEBQ0ITEU6capImJDZKkROdxicR5YOFSd+dTz+DnGTOubzh82PHH
-        2bP1kpQUZ7Ikxcl/Gf6UZEicF1WqlhPx8RZCjnuAzB975iDx4eWgoPeDAgLG83EIc4T4HuMppvgc8tLg
-        wZGBgYGhfB7KHMwUQzz/7xRDPEOMgKf/AcTND0XqdkVIAAAAAElFTkSuQmCC
+        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZW7K8In4io+pU6Ymi3uYmagzKibia7ox3KKyTKfO+WJq
+        TDaMOt9K3JQlTpcBOkV6qeILKLRSQEtBC4XSFkpLW0pbKiAvsYIy0Z2dW/ljTDT7ki+5vbe/c77vfN+5
+        rV93sXPnzkmq2/lQazTtmZmZXgUzTaHwCrI0ryAIXgnz97jYjgRB0iGTyWZ1Hvt/ER0dPTM2NlZiq3bD
+        2dQAi9sNo92GwtJSqLQFUKhu4Zo8A7+djUfmzRwUFhdjY2RkaOfxV8ZrUVFRg5RKpSYtOwsFJTqYXU6U
+        ElxnMUNjNECtLUSmOhcyPj8jSURGVhbE0PHZ7t27l3XivDySpNKalBsKJF5OhqakhNW7oLdaUGQqYwdG
+        5BcXITs/D1kkuXj9GuQ52T6CRx1PUMiCSLKyE6r7+CM+Pl2ach2S5GRfBxZ2YKq0w+yoZDpQarNCRzKR
+        PEUhhzJX5SPoYLbjb2j1euw9cGBNJ9yL8UtMzEaZUolzguDT1uqsgtFsho76600mZhm0Rj20BgNy8vJw
+        6/ZttD3twP1HbWh5/Aj3mpuRo1Zj7/792zohuwZbnHwtXYYLly6ioKAAVlZspDQ6Vqw36KE3GqHnZ32Z
+        SFjGLbuDdGUmxDOXU1OQRGn/FCSITUp6EBkZ6d8J2zXOS6WVSVevovDOHVjKylDOAZrZgZmgZoJaLBZY
+        rBUwsbMScS4FGmTnqZGepcQVWRqSrl2FkCJ4X0rwW3y89BK/VEQJKnQ66CmDNjcXRfSFjlukF1NXDCO7
+        KaFUWn4nv7AAOfn5JMrzrbGQkf5ygn3R0aukN26ggBWZeaBUpUIpdS3WalFKmeyUzcJhWs3lsNlsqLDb
+        UVZh6Ry+DnncNDmN2S1B7bxQxfap0zTSXFWrgVWb5HKUMPNYXWtqGoq+Xo2rZ+Lhqq1FOZfAzMFbrFaU
+        UzIjvaInaQnJRPe/QFC2cNEN91drcW78hGfb5oc+s7Biu1yBfG6V9cQJPFm+Eu7IHYidMhWyxAtwcHVN
+        7MjCWVTQjGaus6WqCjZPNTI1d7oSqGaH7LYuCkPtph3wbo3C8aHDsTVkDgx0agXBa+bMReW2H9FwIRl1
+        679HyvxF1F8PD73hJqin5i5qGhvgrKuFp7kJmuLirgQJ/YK2V362HM6wFXCv2QTv5h3YEBiEVVM+RNXi
+        JbCu2wzHwWPwbI/CAxZxKnQRrlyUwiluVLnJt852mvJuQwPu/9WOYhIsWLCgq0RHAwdtti34FLbF4XAs
+        Xw3bym9wcsx4GMNXwLZlBxyrv0NNeASOzwrBsWPRsHEGrvJyOCmPmy9GD6uvvd+MNrq6WwIx9vT0X18x
+        PQSmuQthomRuAuqXfoHSJeHwkDhmxiwc+mkPKmlCN9ezkj5wcYuqqbunrs5H0C4SWK3dE4ixc8zYRNWU
+        adB+9DE002ejcAZnMSMEP7wzCYf37UMVt6sy5yYs9IedPqjiFrlcLrg5h3stLXjyKgLnli2Ld01+D1eG
+        jsKt0cFQjnkH2cxc5oZ+/REdEYFmGqyOPvAw67g59QRuamrE/YdeNLW24qlIYLO9SGCOiFhm+GQpMkeN
+        Q/qQUUgdMhLKPkFIHTgMqSRUDx+L4/0G4NSaNahi5U6+nxx8hbhIUl39XKLG1oeEJ4H9PwTZYWHvq+fN
+        h3z4aFwnYAbBFb0DETNuAi73DYI8cChkw0Yhh/cP+fXA2V27UM+hVlOeu5SnRtSfXTS1iSMWCexdCQwz
+        Zv6cT3DZgCFQE6iCJMcnf4CY30/jytpvofDzg3rAYGQNewu3ewQgIXgCDDTYg8ZGNNbXo/lBC1/Zj9Dc
+        /rh7grCe/uvqKM09AjSy2oNjg/MyaHc0NuEJ29YfPgrP4BFwBw5BXZ+BSA//ErVtrT6w7oJD9wYHB3ed
+        wbzefdfi7YnY3yvgnF9AwMi406erpXFx1UJ8nOOEIDgOzg51tbz+Jn6dNOnexiNH7OcTEqoEicSRKEgc
+        /JfhSyFZcFxXKutPnjplJuTw58j8sWf2FC/eDQj4PMDPbwQvezP7i/cYrzPF66CJvXqF+/v7B/O6D7MX
+        Uwzx/L9TDPEMMfze+AdRAg79Jy9yBgAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
