--- a/UcasProjectManagement/UcasProWindowsForm/Forms/supplierForm/FrmManagementTheDonors.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/supplierForm/FrmManagementTheDonors.resx
@@ -129,62 +129,62 @@
   </data>
   <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUMSURBVEhLvZVbbBRVGMdXngm+aWJITNQXRRMffIGkElJT
-        RERFKQEqkhgv6IskGBWCi0rAxBBtyoK0BAjQ0pbettuWRQJ1S0vZttt2u+3eut3a7nYvszN76WVnZi9n
-        /34z3bLiookm+k9+OZOZc/7fOd835xzN/6pcLrefMdaVx/APMBIdAMrzVsUi87JUKhWiTv9amUzGQ81T
-        ecuCsrncAfo4nc0td2S5HOgdAWSZAj3/HdRXGar0p5WczNsWJDNWvWKun4yivM2J9zrcqGh3Y2erC9ub
-        HdjW5MBr1+xFvNpoR8mVMTS7BHW8xFhj3rYgOcN0C6JMcwFcUQmtFMTgiaGdaHNH0UI0OaO45hSKaCTq
-        Jng4BQm0EEhpVpe3LUikAIklmWUoHXZeJDMBrXlj1cQhoMHOo+4h1BIXbRF1nJKFZJrV5m0Lmk8xXYwC
-        KEtso9kr6fnYOIUPrk9hX8ckKgyT2KV3Ywel68+83eLCZkpTi3s5RUvSwwLITMfNSyxBMSJiFt5ECtOE
-        0k7FZRWPQqyYSaWNpxCTcuBpLHmcz9sWFBWZLkQBlDXU2SN4i4q6S+9COc1Qed5KxdzcOIHSq8VsrB1H
-        WYMTXQEZYwnAMMO6jwKr8tbLilAAX1xk4SSjWadhCYkqw8RQKIlBYkAh+CBmwhbN4PQtKw5XN8IhAc1+
-        4IKXVeetlxVYyuhmYiITaJlGbwJHe304ftePY4S2148jPT4cMs3ii+6ZB/jujg81oxwqevzQ7NXiYOU5
-        BKkO3XHgjHXhysl+vuJ+gGnKE5fMocs7j2/J9Hh/QA3wDT1/TUaHTT58RUEUDvXMQkvspvQ9WevAml/i
-        WGUQoHn/BLSnL4AWgXavlL1sF2+oAWbnMzqXkGTe+QxsvAyTbwkm/yJ6/Ev4dXZRpZu4PbOAW0Q/fbME
-        FvHpAI81hiAe1c/hme4EVhtj0OzR4khVDcxCTtsTzW1QA0zHMzonl2SBRYZzVipyiwM7qcjvUJHfoB28
-        hX7DsoYJvHLVho1XnXjhohPrmj1Y3R7AY50hvNQt4OnrQazqpFXUjOP53Qe/VI1XNBVP6WyhReYQ0rBF
-        UjAHRNxTSaJfYW6ZoXAKAzM8dhrHoWni8IQxjNK7cbx4m4eGqrumeRafmWY78rYFOaMpnTW0xKYSDOfH
-        eOyhM2hfxxT2GjzY1eZWV/Jmswubmn34sa0V1r4qlPZHsd6cQUkvpaXJh0fqvThh4SDL7FLetiA7BaCc
-        snE+DeP0An4ejaDGyuPsKI8zIxHohjmcGhGg7Quj9oqWDqxTiPKj2De2CE2LgMfbZlBFE/PH07Tp0sU7
-        2SakdINzC2yU0tPpXVANFePTIxyqLGFUDoZwyi7iSH0PPizfhIj5ByDQgBHLJfqLerGudhI3PQm4Y1lY
-        Oan4sBvh5OphLoVxPkumEXUH79ZPopwKvZ3OmtepyNtuRPDcu59j7dpnsWPry7DWfwSP6Scc6zRhY70H
-        lZYIJoQMrGGp+Lh2CPIBCydP9/olDAZTsFAxlYKqbUiGMwmYXEFsWF+CktIt+ERbCb15DL3hLO7Qzhqj
-        yQ1Svx4aP8ZJxReOIocglfXNSSFzUFaN/4gSQH/Xhu/PXsZNFwc7HQlm2q33wjkMc2mMUIB7NG4guORx
-        J6TiK3NFNj69fyAkdimYg6JhhSEubej2cIYRQTT8Rpe8fZEZhsLp+9/NIdk4GBA76Gf560v/v5FG8zvE
-        N8Yod8beOgAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABQxJREFUSEu9lVtsFFUYx1eeCb5pYkhM1BdFEx98gaQSUlNEREUpASqSGC/oiyQY
+        FYKLSsDEEG3KgrQECNDSlt6225ZFAnVLS9m223a77d663drudi+zM3vpZWdmL2f/fjPdsuKiiSb6T345
+        k5lz/t853zfnHM3/qlwut58x1pXH8A8wEh0AyvNWxSLzslQqFaJO/1qZTMZDzVN5y4KyudwB+jidzS13
+        ZLkc6B0BZJkCPf8d1FcZqvSnlZzM2xYkM1a9Yq6fjKK8zYn3OtyoaHdjZ6sL25sd2NbkwGvX7EW82mhH
+        yZUxNLsEdbzEWGPetiA5w3QLokxzAVxRCa0UxOCJoZ1oc0fRQjQ5o7jmFIpoJOomeDgFCbQQSGlWl7ct
+        SKQAiSWZZSgddl4kMwGteWPVxCGgwc6j7iHUEhdtEXWckoVkmtXmbQuaTzFdjAIoS2yj2Svp+dg4hQ+u
+        T2FfxyQqDJPYpXdjB6Xrz7zd4sJmSlOLezlFS9LDAshMx81LLEExImIW3kQK04TSTsVlFY9CrJhJpY2n
+        EJNy4GkseZzP2xYUFZkuRAGUNdTZI3iLirpL70I5zVB53krF3Nw4gdKrxWysHUdZgxNdARljCcAww7qP
+        Aqvy1suKUABfXGThJKNZp2EJiSrDxFAoiUFiQCH4IGbCFs3g9C0rDlc3wiEBzX7ggpdV562XFVjK6GZi
+        IhNomUZvAkd7fTh+149jhLbXjyM9PhwyzeKL7pkH+O6ODzWjHCp6/NDs1eJg5TkEqQ7dceCMdeHKyX6+
+        4n6AacoTl8yhyzuPb8n0eH9ADfANPX9NRodNPnxFQRQO9cxCS+ym9D1Z68CaX+JYZRCgef8EtKcvgBaB
+        dq+UvWwXb6gBZuczOpeQZN75DGy8DJNvCSb/Inr8S/h1dlGlm7g9s4BbRD99swQW8ekAjzWGIB7Vz+GZ
+        7gRWG2PQ7NHiSFUNzEJO2xPNbVADTMczOieXZIFFhnNWKnKLAzupyO9Qkd+gHbyFfsOyhgm8ctWGjVed
+        eOGiE+uaPVjdHsBjnSG81C3g6etBrOqkVdSM4/ndB79UjVc0FU/pbKFF5hDSsEVSMAdE3FNJol9hbpmh
+        cAoDMzx2GsehaeLwhDGM0rtxvHibh4aqu6Z5Fp+ZZjvytgU5oymdNbTEphIM58d47KEzaF/HFPYaPNjV
+        5lZX8mazC5uaffixrRXWviqU9kex3pxBSS+lpcmHR+q9OGHhIMvsUt62IDsFoJyycT4N4/QCfh6NoMbK
+        4+wojzMjEeiGOZwaEaDtC6P2ipYOrFOI8qPYN7YITYuAx9tmUEUT88fTtOnSxTvZJqR0g3MLbJTS0+ld
+        UA0V49MjHKosYVQOhnDKLuJIfQ8+LN+EiPkHINCAEcsl+ot6sa52Ejc9CbhjWVg5qfiwG+Hk6mEuhXE+
+        S6YRdQfv1k+inAq9nc6a16nI225E8Ny7n2Pt2mexY+vLsNZ/BI/pJxzrNGFjvQeVlggmhAysYan4uHYI
+        8gELJ0/3+iUMBlOwUDGVgqptSIYzCZhcQWxYX4KS0i34RFsJvXkMveEs7tDOGqPJDVK/Hho/xknFF44i
+        hyCV9c1JIXNQVo3/iBJAf9eG789exk0XBzsdCWbarffCOQxzaYxQgHs0biC45HEnpOIrc0U2Pr1/ICR2
+        KZiDomGFIS5t6PZwhhFBNPxGl7x9kRmGwun7380h2TgYEDvoZ/nrS/+/kUbzO8Q3xih3xt46AAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYjSURBVEhLjVZ7TJN3FGUPZfhENjU+pm6iM1ncw8xEnVEx
-        8YV7MdziZNmc7uWDqXHZMOp8K3FTliguA9ycQimgIFBobYFZClooLV8LpaUtpS0VkJdYQZnozs5X+WNM
-        NLvJTb4+fufce+65vzZgoNixY8cM9ZVSaLTaHqVK6VMolb5chcKXJsv1SaSpvhSJxPdLYkKvJD2tVyaT
-        Leg79v8iNjZ2fkJCQoq9wQNXeyusHg9MDjvKq6qg1pVBob6MLHk+Tv6WBOWfRSjX67EhOnpp3/HHxhMx
-        MTHPqlQqbW5hAcoqDbC4XagiuMFqgdZkhEZXDqWmGDJ+fjolGfkFBRDDwM927dq1qg/n0ZEqlTZmX1Ig
-        +XwGtJWVrN4NwWZFhbmaHZhQqq9AYWkJCkiSdjEL8qJCP8Ht3rsoZ0EkWdMHNXD8mpSUJ82+iJSMDH8H
-        VnZgrnPA4qxjOlFlt8FAMpE8WyGHqljtJ+hl9uBv6AQBe/bvX9cH93D8FBe3QaZS4YxE4tfW5qqHyWKB
-        gfoLZjOzGjqTAJ3RiKKSEly+cgXd93px43Y3Ou/cxvWODhRpNNizb9/WPsj+wRZnZuXJcC49DWVlZbCx
-        YhOlMbBiwShAMJkg8LVQLRJW02VXkadSQjxzPicbqZT2d0kKTqem3oyOjg7sg+0ff0ildamZmSi/ehXW
-        6mrUcIAWdmAhqIWgVqsVVlstzOysUpxLmRaFJRrkFahwQZaL1KxMSLLTfY8kOJmUJE3nlyooQa3BAIEy
-        6IqLUcG9MNBFgpgGPUzsppJS6fid0vIyFJWWkqjEb+P0/LxHE+yNjf1UeukSyliRhQeq1GpUUVe9Tocq
-        yuSgbFYO02apgd1uR63Dgepaa9/wDSih0+RczAEJmpYsVWybPUcrLVZ3GVm1WS5HJbOE1XXl5KLik7XI
-        PJ0Ed1MTamgCCwdvtdlQQ8lM3BWBpJUkUxaoHiaoXhF+yfPxepyZOv3+tyvD71tZsUOuQCldZTt+HHdX
-        r4EnejsSZs2GLPkcnLSumR1ZOYtaLqOFdrbW18PubUCB9mp/AvXCsF228Ag0bdwO35YYHBszDlvCFsHI
-        Ta0leOOixajb+j1az2Wg+ctvkL0snPoL8HI3PAT1Nl5DY1srXM1N8Ha0Q6vX9yc4OzxkW917q+GK+Aie
-        dRvh27QdXweH4NNZr6N+5duwfb4JzgNH4d0Wg5ssIn5pOC6kSeESHVVj9tvZwaW81tqKG3/1QE+C5cuX
-        95foSPCzm+zL34V9ZSScq9fCvuYznJg8FabIj2DfvB3OtV+hMTIKxxaE4ejRWNg5A3dNDVyUx8OL0cvq
-        m250oJtbrTcaHyYQY/egwC9r54bBvHgFzJTMQ0DhnQ9Q9XYkvCSOm7cAB3/YjTouoYf2rOMeuOmiBuru
-        bW72E/SQwGCzDUwgxo7JU5LVs+ZA98ab0M5diPJ5nMW8MHw3bQYO7d2LerqrruhPWLkfDu5BPV3kdrvh
-        4Ryud3bi7uMIXJs3r9w58xVcGDMRlyeFQjV5GgqZxcyvh49AbFQUOrhgzdwDL7OZzmkhcHt7G27c8qG9
-        qwv3SFBptz9MYImKWmV86x0oJ76IvNETkTN6AlRDQ5AzaixySKgZNwXHho9E/Lp1qGflLt5PTl4hbpI0
-        NDyQqK3rFuEBwfEfgsKIiFc1S5ZBPm4SLhIwn+CKIcGIe3E6zg8LgTx4DGRjJ6KI7x8MeBK/7dyJFg61
-        gfJcozyNov7sor1bHDE7cDj6Exjnzf+xlOCykaOhIVAtSY7NfA1xv5zChfVfQBEQAM3I51Aw9nlceTII
-        Z0Onw8gFu9nWhraWFnTc7OSVfRsdPXcGJogYFPh5M6W5ToA2VntgSmhJPu8TtLXjLtsWDh2B97nx8ASP
-        RvPQUciL/BBN3V1+sIGCkvlCQ0P7z2DJkGHr8cJL2Dc46ExAUNCExFOnGqSJiQ2SpETncYnEeWDhUnfn
-        U8/g5xkzrm84fNjxx9mz9ZKUFGeyJMXJfxn+lGRInBdVqpYT8fEWQo57gMwfe+Yg8eHloKD3gwICxvNx
-        CHOE+B7jKab4HPLS4MGRgYGBoXweyhzMFEM8/+8UQzxDjICn/wHEzQ9F6nZFSAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAABiNJREFUSEuNVntMk3cUZQ9l+EQ2NT6mbqIzWdzDzESdUTHxhXsx3OJk2Zzu5YOp
+        cdkw6nwrcVOWKC4D3JxCKaAgUGhtgVkKWigtXwulpS2lLRWQl1hBmejOzlf5Y0w0u8lNvj5+59x77rm/
+        NmCg2LFjxwz1lVJotNoepUrpUyiVvlyFwpcmy/VJpKm+FInE90tiQq8kPa1XJpMt6Dv2/yI2NnZ+QkJC
+        ir3BA1d7K6weD0wOO8qrqqDWlUGhvowseT5O/pYE5Z9FKNfrsSE6emnf8cfGEzExMc+qVCptbmEByioN
+        sLhdqCK4wWqB1mSERlcOpaYYMn5+OiUZ+QUFEMPAz3bt2rWqD+fRkSqVNmZfUiD5fAa0lZWs3g3BZkWF
+        uZodmFCqr0BhaQkKSJJ2MQvyokI/we3euyhnQSRZ0wc1cPyalJQnzb6IlIwMfwdWdmCuc8DirGM6UWW3
+        wUAykTxbIYeqWO0n6GX24G/oBAF79u9f1wf3cPwUF7dBplLhjETi19bmqofJYoGB+gtmM7MaOpMAndGI
+        opISXL5yBd33enHjdjc679zG9Y4OFGk02LNv39Y+yP7BFmdm5clwLj0NZWVlsLFiE6UxsGLBKEAwmSDw
+        tVAtElbTZVeRp1JCPHM+JxuplPZ3SQpOp6bejI6ODuyD7R9/SKV1qZmZKL96FdbqatRwgBZ2YCGohaBW
+        qxVWWy3M7KxSnEuZFoUlGuQVqHBBlovUrExIstN9jyQ4mZQkTeeXKihBrcEAgTLoiotRwb0w0EWCmAY9
+        TOymklLp+J3S8jIUlZaSqMRv4/T8vEcT7I2N/VR66RLKWJGFB6rUalRRV71OhyrK5KBsVg7TZqmB3W5H
+        rcOB6lpr3/ANKKHT5FzMAQmalixVbJs9RystVncZWbVZLkcls4TVdeXkouKTtcg8nQR3UxNqaAILB2+1
+        2VBDyUzcFYGklSRTFqgeJqheEX7J8/F6nJk6/f63K8PvW1mxQ65AKV1lO34cd1evgSd6OxJmzYYs+Ryc
+        tK6ZHVk5i1ouo4V2ttbXw+5tQIH2an8C9cKwXbbwCDRt3A7flhgcGzMOW8IWwchNrSV446LFqNv6PVrP
+        ZaD5y2+QvSyc+gvwcjc8BPU2XkNjWytczU3wdrRDq9f3Jzg7PGRb3Xur4Yr4CJ51G+HbtB1fB4fg01mv
+        o37l27B9vgnOA0fh3RaDmywifmk4LqRJ4RIdVWP229nBpbzW2oobf/VAT4Lly5f3l+hI8LOb7MvfhX1l
+        JJyr18K+5jOcmDwVpsiPYN+8Hc61X6ExMgrHFoTh6NFY2DkDd00NXJTHw4vRy+qbbnSgm1utNxofJhBj
+        96DAL2vnhsG8eAXMlMxDQOGdD1D1diS8JI6btwAHf9iNOi6hh/as4x646aIG6u5tbvYT9JDAYLMNTCDG
+        jslTktWz5kD3xpvQzl2I8nmcxbwwfDdtBg7t3Yt6uquu6E9YuR8O7kE9XeR2u+HhHK53duLu4whcmzev
+        3DnzFVwYMxGXJ4VCNXkaCpnFzK+Hj0BsVBQ6uGDN3AMvs5nOaSFwe3sbbtzyob2rC/dIUGm3P0xgiYpa
+        ZXzrHSgnvoi80RORM3oCVENDkDNqLHJIqBk3BceGj0T8unWoZ+Uu3k9OXiFukjQ0PJCoresW4QHB8R+C
+        woiIVzVLlkE+bhIuEjCf4IohwYh7cTrODwuBPHgMZGMnoojvHwx4Er/t3IkWDrWB8lyjPI2i/uyivVsc
+        MTtwOPoTGOfN/7GU4LKRo6EhUC1Jjs18DXG/nMKF9V9AERAAzcjnUDD2eVx5MghnQ6fDyAW72daGtpYW
+        dNzs5JV9Gx09dwYmiBgU+HkzpblOgDZWe2BKaEk+7xO0teMu2xYOHYH3ufHwBI9G89BRyIv8EE3dXX6w
+        gYKS+UJDQ/vPYMmQYevxwkvYNzjoTEBQ0ITEU6capImJDZKkROdxicR5YOFSd+dTz+DnGTOubzh82PHH
+        2bP1kpQUZ7Ikxcl/Gf6UZEicF1WqlhPx8RZCjnuAzB975iDx4eWgoPeDAgLG83EIc4T4HuMppvgc8tLg
+        wZGBgYGhfB7KHMwUQzz/7xRDPEOMgKf/AcTND0XqdkVIAAAAAElFTkSuQmCC
 </value>
   </data>
   <metadata name="theDonorsBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
