--- a/UcasProjectManagement/UcasProWindowsForm/Forms/EmployeeForm/FrmContratsManage.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/EmployeeForm/FrmContratsManage.resx
@@ -136,61 +136,61 @@
   <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABQ1JREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
-        RoVgUQmYGKLLKMhGgACDbeyt6zaKBGrHxui2ruu69b2da0tfbu/t2rVbe/ty+ve5dx0Viyaa6D/55dzc
-        e87/Oed57jlH8b+qWCzuZYz1l9D8A7REL4DaklWlyLwmm82GqdO/Vj6fd1PzVMmyrEKxuI8+zhSKSx1Z
-        sQh6RwAFJkHPfwf1lYZK/Wklx0u2ZYmMNS6bq10x1Hbb8V6vE3U9TmzvcmBrhw1b2m147aq1glfbrKi6
-        NIkOhyCPzzDWVrItS8wz1VxygeYCOGIZdFEQjXsOPUS3M4ZOot0ew1W7UEEbcXmah13IgBaCTI5dLtmW
-        laYAQmKB5SkdVj5NZgK6SsayiU1Aq5XH5YfQTJy3ROVxUhYWc6y5ZFvWfJapohRAWmI3zV5Kz8daDz64
-        5sGeXhfqNC7sUDuxjdL1Z97udGAjpanTuZSihczDAohMFYylWEJkiKYL8CaymCGk1hMXZdwSc5W4pDae
-        xVymCJ7GksfZkm1ZsTRTBSgA+dOyo3iLirpD7UAtzVB63kzF3Ng2jeorlaxvnkJNqx39QRGTCUAzy3SH
-        gRUl6yVFKcAMn2SRRUazzsEYTsuME2PhRYwSIxKhBzEQllgeJ2+acbCxDbYM0BEAznlZY8l6ScGFvMoT
-        TTKBlqn1JnB40I+jdwI4QigHAzg04McBvQ9f6GYf4LvbfjRNcKgbCECxW4n99WcQojro4sApc/LS8WG+
-        7n4AF5dk3GIR/d55fEumR4eDcoBv6PlrMjqo9+MrCiJxYMAHJbGT0vdksw2rfoljhUaA4v1jUJ48B1oE
-        epypwkVr+rocwDefV01H5pl3Pg8LL0LvX4A+kMJAYAG/+lIyOuLWbBI3iWH6Zgym8OkIj1WaEB5V38Mz
-        ugRWaueg2KXEoYYmGISiciBWXCcHmInnVVPBeRZMMZwxU5E7bdhORX6HivwG7eBN9BvWtE7jlSsWrL9i
-        xwvn7VjT4cbKniAe6wvjJZ2Ap6+FsKKPVtE0hed37v9SNl6WJ55VmQJxZhNysESzMATTuCuziGGJe0uM
-        RbIYmeWxXTsFRTuHJ7QRVN+J48VbPBRU3VUdPnym9/WWbMuyx7IqYyDBPAmGs5M8dtEZtKfXg90aN3Z0
-        O+WVvNnhwIYOP37s7oJ5qAHVwzGsNeRRNUhpaffjkRYvjhk5iCK7ULIty0oBDL44m+Jz0M4k8fNEFE1m
-        HqcneJwyRaEa53DCJEA5FEHzJSUdWCcQ4yewZzIFRaeAx7tn0UATC8RztOlylTvZImRVw7NzbILS0+dN
-        yoaS8UkThwZjBPWjYZywpnGoZQAf1m5A1PADEGyFyXiB/qJBrGl24YY7AedcAWYuU3nYmTixcZzLYoov
-        kGlU3sE71S7UUqG30lnzOhV5y/Uonnv3c6xe/Sy2bX4Z5paP4Nb/hCN9eqxvcaPeGMW0kIc5kqk8rm2C
-        uM/IiTODgQxGQ1kYqZhSQeU2LMK+COgdIaxbW4Wq6k34RFkPtWESg5ECbtPOmqTJjVK/ARo/yWUqLxxJ
-        NiFTM3QvEzaERNn4j0gB1Hcs+P70RdxwcLDSkWCg3Xo3UsQ4l4OJAtylcSOhBbczkam8Mpdl4XN7R8Lp
-        fglDKK1ZZozLaXRuTmMS0prf6JK3pphmLJK7/90QFrWjwXQv/Sx/fen/N1IofgeNWsV45SX3AAAAAABJ
-        RU5ErkJggg==
+        wwAADsMBx2+oZAAABQlJREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
+        RoVgUQmYGKLLKMhGgACDbey92ygSGC0do9u6ru3W97Ws7fpye2/X7q29fTn9+9y7jopFE030n/xybu49
+        5/+c8zz3nKP4X1UoFPYyxvqKqP8BGqIHQHXRqlxkXpXJZCLU6V8rl8t5qHmmaFlSvlDYRx99+cJSR1Yo
+        gN4RQJ5J0PPfQX2loVJ/Wsnxom1JImP1y+Zd7jiqOx34oMeFmm4Xtnc4sbXNji2tdrxx1VbG6y02VFyy
+        oM0pyOPTjLUUbUsSc0zlC0zTXABnPI0OCqL2zKCb6HTF0U60OuK46hDKaCEuT/BwCGnQQpDOsstF25JS
+        FGByaprlKB02PkVmAjqKxrKJXUCzjcflR9BInLfG5HFSFhazrLFoW9JshqncFEBaYifNXkrPp5pJfHRt
+        Ent63KhRu7Gjy4VtlK4/8267ExspTe2upRQtpB8VQGQqmzfIkiJDLJWHN5mBj5DayYQo45GYKccttYkM
+        ZtIF8DSWPM4WbUuKp5hqnAKQPy07hneoqDu6nKimGUrPm6mYG1smUHmlnPWN46hqdqAvJMKSBNRTrP8w
+        sKJovaQYBTB5Aiy6yGjWWRgjKZlRYiSyiGFiSCL8MAbCGs/h5E0zDta3wJ4G2oLAOS+rL1ovKbSQUxnd
+        ASbQMjXeJA7rAzh6N4gjhFIfxCFdAAe0fnzVP/UQP9wJoGGMQ40uCMVuJfbXnkGY6tCfAE6Z5y4dH+Rr
+        HgQYdgUYt1hAn3cW35Pp0cGQHOA7ev6WjA5qA/iGgkgc0PmhJHZS+p5utGPVbwmsUAtQfHgMypPnQItA
+        90Qwf9GWui4H8M/mVANOP/PO5mDlRWgDC9AG56ELLuC2f16mn7g1NYebxCB9M4bm8fkQj1XqMB7vmsZz
+        /Ums1MxAsUuJQ3UNMAgFpS5eWCcH8CVyKr3Nz0LzDGfMVOR2O7ZTkd+jIr9FO3gT/YZVzRN47YoV6684
+        8NJ5B9a0ebCyO4QneiN4pV/As9fCWNFLq2gYx4s7938tGy9rMpFR3R6/z+xCFtZYBoZQCvdkFjEoMb3E
+        SDSDoSke2zXjULRyeEoTReXdBF6+xUNB1V3V5scXWn9P0bYkR1wKMMUmkwxnLTx20Rm0p2cSu9Ue7Oh0
+        ySt5u82JDW0B/NzZAfNAHSoH41hryKFCT2lpDeCxJi+OGTmIIrtQtC3JJgWw3GfjfBYa3xx+HYuhwczj
+        9BiPU6YYVKMcTpgEKAeiaLykpAPrBOL8GPZY5qFoF/Bk5xTqaGLBRJY2XbZ8J1sFCmD2sTFKT693TjaU
+        jE+aONQZo6gdjuCELYVDTTp8XL0BMcNPQKgZJuMF+ov0WNPoxg1PEq6ZPMxcuvywM3Fi/SiXwTifJ9OY
+        vIN3drlRTYXeSmfNm1TkLddjeOH9L7F69fPYtvlVmJs+gUf7C470arG+yYNaYwwTQg7maLr8uLYL4j4j
+        J/r0wTSGwxkYqZhSQeU2IsKxCGidYaxbW4GKyk34TFmLLoMF+mged2hnWWhyw9RPR+MtXLr8wpFkF9JV
+        A9PpiCEsysZ/RArQddeKH09fxA0nBxsdCQbarfeiBYxyWZgowD0aNxRe8LiS6fIrc1lWPrt3KJLqkzCE
+        U+plRrisut/DqU1CSn2fLnnbPFOPRLMPvhsiomY4lOqhn+WvL/3/RgrF7xLgwtfhYU8NAAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZW7K8In4io+pU6Ymi3uYmagzKibia7ox3KKyTKfO+WJq
-        TDaMOt9K3JQlTpcBOkV6qeILKLRSQEtBC4XSFkpLW0pbKiAvsYIy0Z2dW/ljTDT7ki+5vbe/c77vfN+5
-        rV93sXPnzkmq2/lQazTtmZmZXgUzTaHwCrI0ryAIXgnz97jYjgRB0iGTyWZ1Hvt/ER0dPTM2NlZiq3bD
-        2dQAi9sNo92GwtJSqLQFUKhu4Zo8A7+djUfmzRwUFhdjY2RkaOfxV8ZrUVFRg5RKpSYtOwsFJTqYXU6U
-        ElxnMUNjNECtLUSmOhcyPj8jSURGVhbE0PHZ7t27l3XivDySpNKalBsKJF5OhqakhNW7oLdaUGQqYwdG
-        5BcXITs/D1kkuXj9GuQ52T6CRx1PUMiCSLKyE6r7+CM+Pl2ach2S5GRfBxZ2YKq0w+yoZDpQarNCRzKR
-        PEUhhzJX5SPoYLbjb2j1euw9cGBNJ9yL8UtMzEaZUolzguDT1uqsgtFsho76600mZhm0Rj20BgNy8vJw
-        6/ZttD3twP1HbWh5/Aj3mpuRo1Zj7/792zohuwZbnHwtXYYLly6ioKAAVlZspDQ6Vqw36KE3GqHnZ32Z
-        SFjGLbuDdGUmxDOXU1OQRGn/FCSITUp6EBkZ6d8J2zXOS6WVSVevovDOHVjKylDOAZrZgZmgZoJaLBZY
-        rBUwsbMScS4FGmTnqZGepcQVWRqSrl2FkCJ4X0rwW3y89BK/VEQJKnQ66CmDNjcXRfSFjlukF1NXDCO7
-        KaFUWn4nv7AAOfn5JMrzrbGQkf5ygn3R0aukN26ggBWZeaBUpUIpdS3WalFKmeyUzcJhWs3lsNlsqLDb
-        UVZh6Ry+DnncNDmN2S1B7bxQxfap0zTSXFWrgVWb5HKUMPNYXWtqGoq+Xo2rZ+Lhqq1FOZfAzMFbrFaU
-        UzIjvaInaQnJRPe/QFC2cNEN91drcW78hGfb5oc+s7Biu1yBfG6V9cQJPFm+Eu7IHYidMhWyxAtwcHVN
-        7MjCWVTQjGaus6WqCjZPNTI1d7oSqGaH7LYuCkPtph3wbo3C8aHDsTVkDgx0agXBa+bMReW2H9FwIRl1
-        679HyvxF1F8PD73hJqin5i5qGhvgrKuFp7kJmuLirgQJ/YK2V362HM6wFXCv2QTv5h3YEBiEVVM+RNXi
-        JbCu2wzHwWPwbI/CAxZxKnQRrlyUwiluVLnJt852mvJuQwPu/9WOYhIsWLCgq0RHAwdtti34FLbF4XAs
-        Xw3bym9wcsx4GMNXwLZlBxyrv0NNeASOzwrBsWPRsHEGrvJyOCmPmy9GD6uvvd+MNrq6WwIx9vT0X18x
-        PQSmuQthomRuAuqXfoHSJeHwkDhmxiwc+mkPKmlCN9ezkj5wcYuqqbunrs5H0C4SWK3dE4ixc8zYRNWU
-        adB+9DE002ejcAZnMSMEP7wzCYf37UMVt6sy5yYs9IedPqjiFrlcLrg5h3stLXjyKgLnli2Ld01+D1eG
-        jsKt0cFQjnkH2cxc5oZ+/REdEYFmGqyOPvAw67g59QRuamrE/YdeNLW24qlIYLO9SGCOiFhm+GQpMkeN
-        Q/qQUUgdMhLKPkFIHTgMqSRUDx+L4/0G4NSaNahi5U6+nxx8hbhIUl39XKLG1oeEJ4H9PwTZYWHvq+fN
-        h3z4aFwnYAbBFb0DETNuAi73DYI8cChkw0Yhh/cP+fXA2V27UM+hVlOeu5SnRtSfXTS1iSMWCexdCQwz
-        Zv6cT3DZgCFQE6iCJMcnf4CY30/jytpvofDzg3rAYGQNewu3ewQgIXgCDDTYg8ZGNNbXo/lBC1/Zj9Dc
-        /rh7grCe/uvqKM09AjSy2oNjg/MyaHc0NuEJ29YfPgrP4BFwBw5BXZ+BSA//ErVtrT6w7oJD9wYHB3ed
-        wbzefdfi7YnY3yvgnF9AwMi406erpXFx1UJ8nOOEIDgOzg51tbz+Jn6dNOnexiNH7OcTEqoEicSRKEgc
-        /JfhSyFZcFxXKutPnjplJuTw58j8sWf2FC/eDQj4PMDPbwQvezP7i/cYrzPF66CJvXqF+/v7B/O6D7MX
-        Uwzx/L9TDPEMMfze+AdRAg79Jy9yBgAAAABJRU5ErkJggg==
+        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZTpl+JiIr/iYOsVHsriHmYk6I2LiC6cbwy0qy3TqnC+m
+        xmTDqPOtxE1Z4isDfMOlii+g0EoBLQUtFEpbKC1tKW2pgLzECspEd3Zu5Y8x0exLvuT23v7O+b7zfee2
+        Pl3F9u3bJyrv5kGlVrdlZGR45MxUudwjSFM9giB4EpinY2Paz5071y6VSmd2HPt/ERUVNSMmJibBWuWC
+        o7EeZpcLBpsVBSUlUGryIVfewQ1ZOk6cjUPG7WwUFBVhfUTE3I7jb4y3IiMjBygUCnVqVibyi7UwOR0o
+        IbjWbILaoIdKU4AMVQ6kfH4mIR7pmZkQQ8tnO3fuXNKB8/pIlEiqk2/JEX81CeriYlbvhM5iRqGxlB0Y
+        kFdUiKy8XGSS5PLNG5BlZ3kJnrQ/QwELIsnyDqiu48+4uDRJ8k0kJCV5OzCzA2OFDSZ7BdOOEqsFWpKJ
+        5MlyGRQ5Si9BO7MNf0Oj02H3vn2rOuBejd+jo9dLFQqcFwSvthZHJQwmE7TUX2c0MkuhMeig0euRnZuL
+        O3fvovV5Ox4+aUXz0yd40NSEbJUKu/fu3dIB2TnY4qQbaVJcunIZ+fn5sLBiA6XRsmKdXgedwQAdP+tK
+        RcJSbtk9pCkyIJ65mpKMREp7TkhATGLio4iICN8O2M5xQSKpSLx+HQX37sFcWooyDtDEDkwENRHUbDbD
+        bCmHkZ0Vi3PJVyMrV4W0TAWuSVOReOM6hGTB81qCE3Fxkiv8UiElKNdqoaMMmpwcFNIXWm6RTkxtEQzs
+        pphSafidvIJ8ZOflkSjXu8ZCetrrCfZERa2Q3LqFfFZk4oESpRIl1LVIo0EJZbJRNjOHaTGVwWq1otxm
+        Q2m5uWP4WuRy02Q0ZpcENXPmyrdOmaqW5Chb9KzaKJOhmJnL6lpSUlH43UpcPxMHZ00NyrgEJg7ebLGg
+        jJIZ6BUdSYtJJrr/FYLSBSG3XN+uxvmx41+sDAp6YWbFNpkcedwqy7FjeLZ0OVwR2xAzeQqk8Zdg5+oa
+        2ZGZsyinGU1cZ3NlJazuKmSo73UmUAYF77SEhKJmwzZ4Nkfi6OCh2Bw8C3o6tZzg1bNmo2LLL6i/lITa
+        tT8heV4I9dfBTW+4COquvo/qhno4amvgbmqEuqioM8HFvgFbK75cCkfoMrhWbYBn4zas8w/AismfoHLh
+        IljWbIR9/xG4t0biEYs4OTcE1y5L4BA3qszoXWcbTXm/vh4P/2pDEQnmz5/fWaLD/gM2Wud/AevCMNiX
+        roR1+fc4PmosDGHLYN20DfaVP6I6LBxHZwbjyJEoWDkDZ1kZHJTHxRejm9XXPGxCK13dJYEYu3r4ri2f
+        Fgzj7AUwUjIXAXWLv0bJojC4SRw9fSYO/LoLFTShi+tZQR84uUVV1N1dW+slaBMJLJauCcTYPmp0vHLy
+        VGg+/QzqaUEomM5ZTA/Gz+Mm4uCePajkdlVk34aZ/rDRB5XcIqfTCRfn8KC5Gc/eRODYtGnhjkkf4trg
+        EbgzMhCKUeOQxcxhruv7LqLCw9FEg9XSB25mLTenjsCNjQ14+NiDxpYWPBcJrNZXCUzh4Uv0ny9Gxogx
+        SBs0AimDhkPROwAp/YcghYSqoaNxtG8/nFy1CpWs3MH3k52vECdJqqpeStTQ8pjwJLD9hyArNPQj1Zx5
+        kA0diZsETCe4vJc/oseMx9U+AZD5D4Z0yAhk8/4Bn244u2MH6jjUKspzn/JUi/qzi8ZWccQiga0zgX76
+        jN/yCC7tNwgqApWT5OikjxF9+hSurf4Bch8fqPoNROaQ93C3mx8uBo6HngZ71NCAhro6ND1q5iv7CZra
+        nnZNENrDd00tpXlAgAZWu390YG467Y6GRjxj27qDh+EeOAwu/0Go7d0faWHfoKa1xQvWVXDonsDAwM4z
+        mNOrz2q8PwF7e/qd9/HzGx576lSVJDa2SoiLtR8TBPv+oLnO5u7v4I+JEx+sP3TIduHixUohIcEeLyTY
+        +S/Dm0KSYL+pUNQdP3nSRMihL5H5Y8/sIV584Of3lZ+PzzBe9mK+K95jdGeK1wETevYM8/X1DeR1b2ZP
+        phji+X+nGOIZYvi8/Q8tRA7O5+yLvAAAAABJRU5ErkJggg==
 </value>
   </data>
   <metadata name="telerikMetroTheme1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
