--- a/UcasProjectManagement/UcasProWindowsForm/Forms/EmployeeForm/FrmEmployeeMng.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/EmployeeForm/FrmEmployeeMng.resx
@@ -132,37 +132,63 @@
   </metadata>
   <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAkZJREFUOE+tk11Ik1Ecxt+gm64KuumuMm2E1r7e171z4ojCogZua27uSxkilZFi
-        RZoXaViamYWttLa0raZk7UIJNUrpImOBrrJX0opKxJF9GTaLZaOnvceYo6R50R9+53Dg9zwcOBzqvwyt
-        d9Yn653fGL0Ti4F3+QwJM9lXVilyPSj2fof/0RNwHPdP+n2DxJUZW8Dq6pdRYu351Yq8NuxpCy0Y+JP7
-        kQLeZc0uSLMvLScFabmtsF6eQSAQiMvj4RfElZlcEGadXUFFljWstRXqhikEg8G4DHKviSszxhTILB5k
-        1rxDOByOy9DzAHHlx9MhqhKcIQWpZg8yKiewmPGPjkFetxkFN7XYeDJpmhQwpmuQl7/B5Mcvv7WFJ/Qj
-        BFXjFhzssWAo7MGRXms4WpB6+OVfMGUPYs4jYGu3oqjLAN+sA2V95pgbGK9CeuBZlLG3Qey9boGyQYSj
-        tw5hdPwz1I7tKOzWoDt0CjemKiGp3oDk/ep1pIA2uiEqehrF6tYir3Mb3DOl2OFkoTitgLlj7tz0vhji
-        SJg22+dfgc5xI2X3QBSbOwc6bwbqpvMJ5a/0ZK+atEJUnYSUwl7Qhpb5AqnBBYGtP8qAn0O+2wBVuwyl
-        n7IIJRM7IalJRFrJbeLQhua5AkZtX0nrm5Fg6kOi6S7WG3vg6fDB2/UQuosaZLaLYRtPh/DEWrg670BS
-        cI84/KdSKiuW8v9piVTbeIFROWZp7bkP4l12LhbBMfbrpoqEn0J97Qjv8EGJrmlYorHvoyiK+gVwS3Jl
-        EcKx+gAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAUISURBVEhLvZVtbFNVGMcrnwl+08SQmKhfFE384BdIJiEz
+        Q0RUlBFgIonxBf0iCUaFYFEJmBiiyyjIRoAAg23svdsoEqgtg9FtXdd269u6zbVdX27v7dq99d7e9vTv
+        c+86KhZNNNF/8su9ac/5P+d5nnvO0fyvyufzexljPQX0/wAD0QWgsmBVKjKvyOVYlAb9a9F8Pz2eKlgW
+        lcvn92VzbDKXXxrI8nnQbwRNYgr0/nfQWGWqMp4yOV6wLUpirHbZvGMsgcp2D97r8qGq04ftbV5sbXFj
+        S7Mbr111lfBqkwtllxxo8QrqfJGxpoJtUVKW6dKyshbAmxDRRkH0/hl0Eu2+BFqJZk8CVz1CCU3E5VEe
+        HkEEJQJRZpcLtkWlKcCClGNZKoeLT5OZgLaCsWriFtDo4nH5IdQT551xdZ5ShUWZ1Rdsi5rNMN0cBVBS
+        bKfVK+X52DCOD66NY0/XGKr0Y9jR4cM2KtefebvVi41UplbfUokWxIcFkJgusZhlKYkhns5hIpXBJKE8
+        x5OSil9hppQx5ZnMYEbMg6e55HG2YFtUIs10PAUgf0o7jreoqTs6vKikFSrvm6mZG5tGUX6llPX1I6ho
+        9KAnLMGRAvRTzHgYWFGwXlKcAkTmZRZbZLRqGdZoWmWIGIwuYoDoV4g8iIVwJrI4edOOg7VNcItASwg4
+        N8FqC9ZLCi9kddNzMhMoTcNECod7gzh6N4QjhLY3hEPmIA6YAvjCOPUA390Oom6YQ5U5BM1uLfZXn0GE
+        +mBMAqfsc5eO9/FV9wMEZ2XGLebRMzGLb8n0aF9YDfANvX9NRgdNQXxFQRQOmAPQEjupfE/Wu7HqlyRW
+        6AVo3j8G7clzoCTQGcjmLrrS19UAgdmsbjyVYROzWTh5CabgAkyheZhDC/g1MK9iJG5NzeEm0Uf/WcPz
+        +LSfxyp9BI92TOMZYworDTPQ7NLiUE0dLEJea07k16kBJpNZnT+RYeF5hjN2anKrG9upye9Qk9+gHbyJ
+        PsOKxlG8csWJ9Vc8eOG8B2ta/FjZGcZj3VG8ZBTw9LUIVnRTFnUjeH7n/i9V42WNJzM6Ny8ytyDDGc/A
+        Ek7jnsoi+hSmlxiMZdA/xWO7YQSaZg5PGGIov5vEi7d4aKi7q1oC+MwU6CrYFuVJZHSjvMTGUwxnHTx2
+        0Rm0p2scu/V+7Gj3qZm82eLFhpYgfmxvg/1ODcr7ElhryaKsl8rSHMQjDRM4ZuUgSexCwbYoFwWwcyIb
+        4WUYJufw83AcdXYep4d5nLLFoRvicMImQHsnhvpLWjqwTiDBD2OPYx6aVgGPt0+hhhYWSsq06eTSnewU
+        MjpbLM2GqTzdE3OqoWJ80sahxhpD9UAUJ1xpHGow48PKDYhbfgDCjbBZL9BX1Is19WO44U/BN5MDLbT0
+        sLNxUu0Ql8EInyPTuLqDd3aMoZIavZXOmtepyVuux/Hcu59j9epnsW3zy7A3fAS/6Scc6TZhfYMf1dY4
+        RoUs7DGx9Lh2C9I+KydN9oZEDEQysFIzlYaqz6gEzyJg8kawbm0Zyso34RNtNTosDvTGcrhNO8tBixug
+        cWaa7+DE0gtHkVsQK/qmxaglIqnGf0QJ0HHXie9PX8QNLwcXHQkW2q33YnkMcTJsFOAezaPjw+9LiaVX
+        5rKcvLy3P5ruUbBE0vplBjlZb/RzepuQ1v9Gl7xrnukHY/L9/y1RyTAQTnfRx/LXl/5/I43md4jQxuxv
+        d2EZAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAAAxZJREFUOE9lkmtIk3EUxv+6uTlnptjF0A9N5jKtvCAoeQksrLSLlyIMKSiiD3lN
-        7IKmZOkUoTCi1Mrp0CItnS5tXUgwbN2ghIGIXWial2kxl/2J+vB03u0VujzwcA7P+Z3Dn5eXPcna8sRh
-        6uWOxybuMC36Pp839ZHvcTvN7KYebu83cPu9Lqrd3NF5jfelJL8JY0zNFnQ3fs323sFchx6zt1sxd7sF
-        tlvNmG2/gdm2a7DpG2FrvQpbyxXMNF/GzPVLsLU14We9Fgf9/aqYveEsn6qvxtTFc5isLYe1ohgTlSX4
-        XFOGz9pSTJw/hYnSAoyfzsXEmUKMlxfBSp6vOI6Tq1bomSU7hT+PVONZSACex4RBkHl/JgZWKvEiNBBD
-        gUthPpTtzAc0q2BWr8CQJgCjcWtR6KfUMZMX471Shi7GnNCieqIj0UGZaVOCmLgkcL0eDINyhmMSNx3r
-        8nDjNz3coKeBITNDxFzqPnxI7Fyqj45CK3HtUjf0y9xxTEYHOqUSrneXoE0iQQMNO1NTRfxvXVi/Dk3C
-        MrGtZKNUSgckOtavkPMuuRzd5B4PGdqFJ+bliWsuNe3agRbKjZ6eTu4ueUAhR74nHTB5K/kjpRKPvLzw
-        kKDHmzeLa3/rQWws+oS5tzceEP9qiTcKFXTgtY8PN/v64plCgaf/PP/mgQNi59LT5GQMymQYIn7E3xcl
-        SpmOWYJVfDg4GG8DA0XMpY6EBHqmAi9zcsTEJfPy5RhWqWBVB+OEr0LHRuI38rH4eLyLi8ObxEQnZMzI
-        gCUiAtakJFjCw2EpLnbmA9HReE/cWEIiviTGo9Sf/oOvaal8MisLU3v2YDo9HR+3b4c1LQ0zixnVT9u2
-        YTQlBVO7d2Oasknyj317URHkp2ffjx75NZ9fCEduLr7R11+gukDV8Ye/5bpyYS5wjoIi4HgBTgUta2Af
-        sraMQ1sF1GgBbTVQLVro/zMxteS6Goxm7/y+QS7ZytZIWUy5Jqixbr3GWBGqNpSoVYaSEJXhNLmMLGSV
-        YWpDVXiIoZZ8IVJjrAxd3RalkO1kjLHfnzqGvkdnWnAAAAAASUVORK5CYII=
+        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAYoSURBVEhLjVV7TFN3GGUPZfhEnBofm07RbTHuYWaizjgx
+        0aFOHcMtTpbNqXNzytSYbBh1PheJm2OJOjNA54OWIoKChVYKSClooVBuX7S0pbSlUuQlVnBMdGfnMv4Y
+        E82+5Etu7+3vnO873/nuDeovdu7c+Yr6eik0Wm1X3rXCgFKlClxRKgMZ8isB2cX0gCRVGjiZlNh9ITOj
+        Wy6Xz+899v8iPj5+XmJiosRR74W7tRk2rxdGpwPlJhPUujIo1UW4pMjF8dPJIDnKKyuxKTZ2ce/xJ8ZT
+        cXFxI1X5+dorBfkoq9LD6nHDRHC9zQqt0QCNrhx5mmLI+fyUJAW5+fkQQ89nu3fvXtWL8/hITUtryLqq
+        RMrFdGirqli9B4LdhgqLmR0YUVpZgYLSEuSTJO3yJSgKC3oI7nXfRzkLIsmaXqj+47fk5BxZ1mVI0tN7
+        OrCxA0utE1ZXLdMFk8MOPclE8iylAqpidQ9BN7MLf0EnCNh74MC6XrhH46eEhE1ylQpnpNIebe3uOhit
+        Vuipv2CxMM3QGQXoDAYUlpSg6Pp1dD7oxu17nWj/4x5utbWhUKPB3v37t/VC9g22OONSjhznL6ShrKwM
+        dlZspDR6ViwYBAhGIwT+FswioZkuu4EcVR7EMxezs5BKaX+XSnA2NfVObGxscC9s3zgvk9WmZmai/MYN
+        2MxmVHOAVnZgJaiVoDabDTZ7DSzsrEqcS5kWBSUa5OSrQBsj9VImLmRlBh5LcDw5WXaBf6qgBDV6PQTK
+        oCsuRgX3Qk8XCWLqK2FkN1WUSsf/lJaXobC0lEQlPTbOzM15PMG++PjPZFevoowVWXnApFbDRF0rdTqY
+        KJOTstk4TLu1Gg6HAzVOJ8w1tt7h61FCpyny8von8C9arNw+a7ZWVqzuMLBqi0KBKmYJq+vIvoKKT9ci
+        81QyPH4/qmkCKwdvs9tRTcmM3BWBpFUkyyu69iiBecnSq95P1uPMlGkP41aueGhjxU6FEqV0lf3nn3F/
+        9Rp4Y3cgceYsyFPOw0XrWtiRjbOo4TJaaWdbXR0cvnoUaW/0JVC/E7HbvjQK/q93ILA1DkdHj8XWiAUw
+        cFNrCN6wYCFqt32H5vPpaNz4DbLeXUr9Bfi4G16C+hpuoqGlGe5GP3xtrdBWVvYlODc0bHvt+6vhjvoY
+        3nVfI7B5B74KDcNnM99E3bLlsG/YDNfBI/Btj8MdFnFi8VJkpMngFh1Vbemxs5NLebO5Gbf/7EKlQQhE
+        Rkb2lehw6MjNjsiVcCyLhmv1WjjWfI5jE6fAGP0xHFt2wLX2SzREx+Do/AgcORIPB2fgqa6Gm/J4+WL0
+        sXr/7TZ0cqu5lI8SiLFnQPDGmjkRsCxcAgsl8xJQWPEhTMuj4SNxwtz5OPT9HtRyCb20Zy33wEMX1VN3
+        X2NjD0EXCYx2e/8EYuycOClFPXM2dG+9De2cd1A+l7OYG4Fvp76CH/btQx3dVVt4DTbuh5N7UEcXeTwe
+        eDmHW+3tuP8kAveWLct2zXgNGaMnoOjFcKgmTkUBs5j51dBhiI+JQRsXrJF74GM20jlNBG5tbcHtuwG0
+        dnTgAQlMDsejBNaYmFWG91Ygb8Jk5IyagOxR46EaHIbsEWOQTULN2Ek4OnQ4TqxbhzpW7ub7ycVXiIck
+        9fX/SNTScZfwgNn5H4KCqKjXNYvehWLsi7hMwFyCKweFImHyNFwcEgZF6GjIx0xAIe8fCnoap3ftQhOH
+        Wk95blKeBlF/dtHaKY6YHTidfQkMc+f9WEpw+fBR0BCohiRHZ7yBhJO/ImP9F1AGBUEz/Hnkj3kB158O
+        wbnwaTBwwe60tKClqQltd9r5yr6Htq4/+ieIGhC8oZHS3CJAC6s9OCm8JJcferS04j7bFn44DN/z4+AN
+        HYXGwSOQE/0R/J0dPWD9hd/vD4SHh/edwaJBQ9bjpZexf2DImaCQkPFJJ0/WpyUl1UuTk1wJMpnr0MLF
+        nvZnnsMvr06/tSn+sPPsuXN1UonElSKVuCRSqUsiS3VJ02WubJWq6diJE1ZCjv0HmR975gDxYnpIyAch
+        QUHjeDmIOUy8x3iGKV6HvTxwYHRwcHA4rwczBzLFEM//O8UQzxAj6Nm/AZ9QD+oH9nfUAAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <metadata name="employeeBindingSource.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
