--- a/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmManageExpenses.resx
+++ b/UcasProjectManagement/UcasProWindowsForm/Forms/ExpensesForm/FrmManageExpenses.resx
@@ -136,64 +136,64 @@
         Ya2Vv9P+BaZuyyTiI0unnEbjNy0iDCfMyGpsAAAAAElFTkSuQmCC
 </value>
   </data>
-  <data name="gridViewCommandColumn1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gridViewCommandColumn3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABQxJREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
-        RoVgUQmYGKLLKMhGgACDbey92ygSKC2Drdu6ru3Wt/WFtV1fbu/t2r21ty+nf59711GxaKKJ/pNfzs29
-        5/yfc57nnnMU/6sKhcJexlhfEfU/QEP0AKguWpWLzKsymUyEOv1r5XI5NzXPFC1LyhcK++ijL19Y6sgK
-        BdA7AsgzCXr+O6ivNFTqTys5XrQtSWSsftm8azKO6k4HPuhxoabbhe0dTmxts2NLqx1vXLWV8XqLDRWX
-        LGhzCvL4NGMtRduSxBxTBcJRmgvgjKfRQUHU7hl0E52uONqJVkccVx1CGS3E5QkeDiENWgjSWXa5aFtS
-        igJMTUdZjtJh41NkJqCjaCyb2AU023hcfgSNxHlrTB4nZWExyxqLtiXNZpjKRwGkJXbS7KX0fKrx4KNr
-        HuzpmUSNehI7ulzYRun6M++2O7GR0tTuWkrRQvpRAUSmcvkjLCkyxFJ5eJMZ+Aip9SREGbfETDmTUpvI
-        YCZdAE9jyeNs0bakeIqpHBSA/GnZMbxDRd3R5UQ1zVB63kzF3Ngygcor5axvHEdVswN9IRGWJKCeYtrD
-        wIqi9ZJiFMB6P8yii4xmnYUxkpIZJUYiixgmhiTCD2MgrPEcTt4042B9C+xpoC0InPOy+qL1kkILOZXZ
-        F2YCLVPjTeJwfwBH7wVxhFD2B3FIH8ABnR9faace4oc7ATSMcajRB6HYrcT+2jMIUx20CeCUee7S8QG+
-        5kEAkzfMuMUC+ryz+J5Mjw6E5ADf0fO3ZHRQF8A3FETigN4PJbGT0vd0ox2rfktghVqA4sNjUJ48B1oE
-        uici+Yu21HU5gH82pzJ4Qsw7m4OVF6ELLEAXnIc+uIDb/nkZLXFrag43iQH6ZgzN4/MhHqvUYTzeNY3n
-        tEms1MxAsUuJQ3UNMAgFpT5eWCcH8CVyqkFXiIXmGc6YqcjtdmynIr9HRX6LdvAm+g2rmifw2hUr1l9x
-        4KXzDqxpc2NldwhP9EbwilbAs9fCWNFLq2gYx4s7938tGy/Lk8io7jiCzC5kYY1lYAilMCiziAGJ6SVG
-        ohkMTfHYrhmHopXDU5ooKu8l8PItHgqq7qo2P77Q+XuKtiU54hmVzjHNPEmGsxYeu+gM2tPjwW61Gzs6
-        XfJK3m5zYkNbAD93dsB8tw6VA3GsNeRQ0U9paQ3gsSYvjhk5iCK7ULQtyUYBbtuCbJzPQuObw69jMTSY
-        eZwe43HKFINqlMMJkwDl3SgaLynpwDqBOD+GPZZ5KNoFPNk5hTqaWDCRpU2XLd/JVoECTATYGKWn1zsn
-        G0rGJ00c6oxR1A5HcMKWwqEmPT6u3oCY4Scg1AyT8QL9Rf1Y0ziJG+4kXDN5mLl0+WFn4sT6US6DcT5P
-        pjF5B+/smkQ1FXornTVvUpG3XI/hhfe/xOrVz2Pb5ldhbvoEbt0vONKrw/omN2qNMUwIOZij6fLj2i6I
-        +4yc6OsPpjEczsBIxZQKKrcREY5FQOcMY93aClRUbsJnylp0GSzoj+Zxh3aWhSY3TP30NN7CpcsvHEl2
-        IV11dzodMYRF2fiPSAG67lnx4+mLuOHkYKMjwUC7dTBawCiXhYkCDNK4ofCC25VMl1+Zy7Ly2b1DkVSf
-        hCGcUi8zwmXVWjenNgkp9X265G3zTD0SzT74boiImuFQqod+lr++9P8bKRS/Axksw3eRadqMAAAAAElF
-        TkSuQmCC
+        wwAADsMBx2+oZAAABQpJREFUSEu9lW1sU1UYxyufCX7TxJCYqF8UTfzgF0gmITNDRFSUEWAiifEF/SIJ
+        RoVgUQmYGKLLKMhGgACDbazbum6jSKB0DEa3dVvbre8vbCt9ub23a/fWe/ty+ve5dx0Viyaa6D/55dzc
+        e87/Oed57jlH9b+qUCjsZoz1FNH/AwxEF4DqolW5yLwqk8lEqdO/Vi6X81HzTNGypHyhsIc+BvOFxY6s
+        UAC9I4A8k6Hnv4P6ykPl/rSSo0XbkiTG6pfMdd4Eqjtc+KDLg5pOD7a2u7FZ68SmVifeuOwo4/UWByou
+        2KB1C8p4kbGWom1JUo5pvMEJmgvgTohopyB63zQ6iQ5PAm1EqyuByy6hjBbi4jgPlyCCFgIxyy4WbUtK
+        UwC3f4LlKB0OPk1mAtqLxoqJU0Czg8fFR9BInLXHlXFyFhayrLFoW9JMhmmcFEBeYgfNXk7PpwY/Prri
+        x64uL2r0XmzTebCF0vVn3m1zYz2lqc2zmKJ58VEBJKaxee6xlMQQT+cRSGUQJOTWn5QUfDLT5XjlNpnB
+        tFgAT2PJ43TRtqREmmlGKQD507LjeIeKuk3nRjXNUH7eSMVc3zKOykvlrG0cQ1WzCz1hCbYUoJ9gxoPA
+        sqL1ouIUYNAVZLEFRrPOwhJNKwwTQ9EFDBIDMpGHMRP2RA7Hr1uxv74FThHQhoAzAVZftF5UeD6nMTuD
+        TKBlGgIpHOybwuE7IRwi1H0hHOidwj7TJL4yTjzED7em0DDKoaY3BNVONfbWnkKE6mBMAiessxeO9vM1
+        DwL0O4KMWyigJzCD78n0cH9YCfAdPX9LRvtNU/iGgsjs652EmthO6Xu60YkVvyWxTC9A9eERqI+fAS0C
+        neP38ucd6atKgMmZnMY0HmCBmRzsvATT1DxMoTn0huZxc3JOwUjcmJjFdaKfvlnCc/h8gMcKfQSP6+7j
+        OWMKyw3TUO1Q40BdA8xCQd2bKKxRAgSTOc1NW4CF5xhOWanIbU5spSK/R0V+i3bwBvoNq5rH8dolO9Ze
+        cuGlsy6s0vqwvDOMJ7qjeMUo4NkrESzrplU0jOHF7Xu/VoyX5E9mNDdHfcwpZGGPZ2AOp3FXYQH9MvcX
+        GYplMDDBY6thDKpWDk8ZYqi8k8TLN3ioqLortJP4wjTZVbQtyZWQA/iZP8Vw2sZjB51Bu7r82Kn3YVuH
+        R1nJ21o31mmn8HNHO6y361DZn8Bqcw4VfZSW1ik81hTAEQsHSWLnirYlOeQAwz42xmdhCM7i19E4Gqw8
+        To7yODESh2aYw7ERAerbMTReUNOBdQwJfhS7bHNQtQl4smMCdTSxUDJLmy5bvpPtAgWweNkopac7MKsY
+        ysbHRzjUWWKoHYzimCONA029+Lh6HeLmn4BwM0Ys5+gv6sOqRi+u+VLwTOdh5cTyw26Ek+qHuQzG+DyZ
+        xpUdvF3nRTUVejOdNW9SkTddjeOF97/EypXPY8vGV2Ft+gQ+0y841G3C2iYfai1xjAs5WGNi+XHtFKQ9
+        Fk4K9oVEDEYysFAx5YIqbVSCawEwuSNYs7oCFZUb8Jm6FjqzDX2xPG7RzrLR5AapXy+Nt3Fi+YUjyymI
+        Vbfvi1FzRFKM/4gcQHfHjh9Pnsc1NwcHHQlm2q13YwUMc1mMUIC7NG4gMu/zpMTyK3NJdj67eyCa7pEx
+        R9L6JYa4rN7o4/QjQlp/jy55xxzTD8WyD76bo5JhMJzuop/lry/9/0Yq1e8Zs8I726RF+AAAAABJRU5E
+        rkJggg==
 </value>
   </data>
-  <data name="gridViewCommandColumn2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="gridViewCommandColumn4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZW7K8In4io+pU6Ymi3uYmagzKibia7ox3KKyTKfO+WJq
-        TDaMOt9K3JQlTpcBOkV6qeILKLRSQEtBC4XSFkpLW0pbKiAvsYIy0Z2dW/ljTDT7ki+5vbe/c77vfN+5
-        rV93sXPnzkmq2/lQazTtmZmZXgUzTaHwCrI0ryAIXgnz97jYjgRB0iGTyWZ1Hvt/ER0dPTM2NlZiq3bD
-        2dQAi9sNo92GwtJSqLQFUKhu4Zo8A7+djUfmzRwUFhdjY2RkaOfxV8ZrUVFRg5RKpSYtOwsFJTqYXU6U
-        ElxnMUNjNECtLUSmOhcyPj8jSURGVhbE0PHZ7t27l3XivDySpNKalBsKJF5OhqakhNW7oLdaUGQqYwdG
-        5BcXITs/D1kkuXj9GuQ52T6CRx1PUMiCSLKyE6r7+CM+Pl2ach2S5GRfBxZ2YKq0w+yoZDpQarNCRzKR
-        PEUhhzJX5SPoYLbjb2j1euw9cGBNJ9yL8UtMzEaZUolzguDT1uqsgtFsho76600mZhm0Rj20BgNy8vJw
-        6/ZttD3twP1HbWh5/Aj3mpuRo1Zj7/792zohuwZbnHwtXYYLly6ioKAAVlZspDQ6Vqw36KE3GqHnZ32Z
-        SFjGLbuDdGUmxDOXU1OQRGn/FCSITUp6EBkZ6d8J2zXOS6WVSVevovDOHVjKylDOAZrZgZmgZoJaLBZY
-        rBUwsbMScS4FGmTnqZGepcQVWRqSrl2FkCJ4X0rwW3y89BK/VEQJKnQ66CmDNjcXRfSFjlukF1NXDCO7
-        KaFUWn4nv7AAOfn5JMrzrbGQkf5ygn3R0aukN26ggBWZeaBUpUIpdS3WalFKmeyUzcJhWs3lsNlsqLDb
-        UVZh6Ry+DnncNDmN2S1B7bxQxfap0zTSXFWrgVWb5HKUMPNYXWtqGoq+Xo2rZ+Lhqq1FOZfAzMFbrFaU
-        UzIjvaInaQnJRPe/QFC2cNEN91drcW78hGfb5oc+s7Biu1yBfG6V9cQJPFm+Eu7IHYidMhWyxAtwcHVN
-        7MjCWVTQjGaus6WqCjZPNTI1d7oSqGaH7LYuCkPtph3wbo3C8aHDsTVkDgx0agXBa+bMReW2H9FwIRl1
-        679HyvxF1F8PD73hJqin5i5qGhvgrKuFp7kJmuLirgQJ/YK2V362HM6wFXCv2QTv5h3YEBiEVVM+RNXi
-        JbCu2wzHwWPwbI/CAxZxKnQRrlyUwiluVLnJt852mvJuQwPu/9WOYhIsWLCgq0RHAwdtti34FLbF4XAs
-        Xw3bym9wcsx4GMNXwLZlBxyrv0NNeASOzwrBsWPRsHEGrvJyOCmPmy9GD6uvvd+MNrq6WwIx9vT0X18x
-        PQSmuQthomRuAuqXfoHSJeHwkDhmxiwc+mkPKmlCN9ezkj5wcYuqqbunrs5H0C4SWK3dE4ixc8zYRNWU
-        adB+9DE002ejcAZnMSMEP7wzCYf37UMVt6sy5yYs9IedPqjiFrlcLrg5h3stLXjyKgLnli2Ld01+D1eG
-        jsKt0cFQjnkH2cxc5oZ+/REdEYFmGqyOPvAw67g59QRuamrE/YdeNLW24qlIYLO9SGCOiFhm+GQpMkeN
-        Q/qQUUgdMhLKPkFIHTgMqSRUDx+L4/0G4NSaNahi5U6+nxx8hbhIUl39XKLG1oeEJ4H9PwTZYWHvq+fN
-        h3z4aFwnYAbBFb0DETNuAi73DYI8cChkw0Yhh/cP+fXA2V27UM+hVlOeu5SnRtSfXTS1iSMWCexdCQwz
-        Zv6cT3DZgCFQE6iCJMcnf4CY30/jytpvofDzg3rAYGQNewu3ewQgIXgCDDTYg8ZGNNbXo/lBC1/Zj9Dc
-        /rh7grCe/uvqKM09AjSy2oNjg/MyaHc0NuEJ29YfPgrP4BFwBw5BXZ+BSA//ErVtrT6w7oJD9wYHB3ed
-        wbzefdfi7YnY3yvgnF9AwMi406erpXFx1UJ8nOOEIDgOzg51tbz+Jn6dNOnexiNH7OcTEqoEicSRKEgc
-        /JfhSyFZcFxXKutPnjplJuTw58j8sWf2FC/eDQj4PMDPbwQvezP7i/cYrzPF66CJvXqF+/v7B/O6D7MX
-        Uwzx/L9TDPEMMfze+AdRAg79Jy9yBgAAAABJRU5ErkJggg==
+        wwAADsMBx2+oZAAABhhJREFUSEuNVntMU3cYZTpl+JiIr/iYOsVHsriHmYk6I2LiC6cbwy0qy3TqnC+m
+        xmTDqPOtxE1Z4isDfMOlii+g0EoBLQUtFEpbKC1tKW2pgLzECspEd3Zu5Y8x0exLvuT23v7O+b7zfee2
+        Pl3F9u3bJyrv5kGlVrdlZGR45MxUudwjSFM9giB4EpinY2Paz5071y6VSmd2HPt/ERUVNSMmJibBWuWC
+        o7EeZpcLBpsVBSUlUGryIVfewQ1ZOk6cjUPG7WwUFBVhfUTE3I7jb4y3IiMjBygUCnVqVibyi7UwOR0o
+        IbjWbILaoIdKU4AMVQ6kfH4mIR7pmZkQQ8tnO3fuXNKB8/pIlEiqk2/JEX81CeriYlbvhM5iRqGxlB0Y
+        kFdUiKy8XGSS5PLNG5BlZ3kJnrQ/QwELIsnyDqiu48+4uDRJ8k0kJCV5OzCzA2OFDSZ7BdOOEqsFWpKJ
+        5MlyGRQ5Si9BO7MNf0Oj02H3vn2rOuBejd+jo9dLFQqcFwSvthZHJQwmE7TUX2c0MkuhMeig0euRnZuL
+        O3fvovV5Ox4+aUXz0yd40NSEbJUKu/fu3dIB2TnY4qQbaVJcunIZ+fn5sLBiA6XRsmKdXgedwQAdP+tK
+        RcJSbtk9pCkyIJ65mpKMREp7TkhATGLio4iICN8O2M5xQSKpSLx+HQX37sFcWooyDtDEDkwENRHUbDbD
+        bCmHkZ0Vi3PJVyMrV4W0TAWuSVOReOM6hGTB81qCE3Fxkiv8UiElKNdqoaMMmpwcFNIXWm6RTkxtEQzs
+        pphSafidvIJ8ZOflkSjXu8ZCetrrCfZERa2Q3LqFfFZk4oESpRIl1LVIo0EJZbJRNjOHaTGVwWq1otxm
+        Q2m5uWP4WuRy02Q0ZpcENXPmyrdOmaqW5Chb9KzaKJOhmJnL6lpSUlH43UpcPxMHZ00NyrgEJg7ebLGg
+        jJIZ6BUdSYtJJrr/FYLSBSG3XN+uxvmx41+sCwp6YWbFNpkcedwqy7FjeLZ0OVwR2xAzeQqk8Zdg5+oa
+        2ZGZsyinGU1cZ3NlJazuKmSo73UmUAYF77SEhKJmwzZ4Nkfi6OCh2Bw8C3o6tZzg1bNmo2LLL6i/lITa
+        tT8heV4I9dfBTW+4COquvo/qhno4amvgbmqEuqioM8HFvgFbK75cCkfoMrhWbYBn4zas8w/AismfoHLh
+        IljWbIR9/xG4t0biEYs4OTcE1y5L4BA3qszoXWcbTXm/vh4P/2pDEQnmz5/fWaLD/gM2Wud/AevCMNiX
+        roR1+fc4PmosDGHLYN20DfaVP6I6LBxHZwbjyJEoWDkDZ1kZHJTHxRejm9XXPGxCK13dJYEYu3r4ri2f
+        Fgzj7AUwUjIXAXWLv0bJojC4SRw9fSYO/LoLFTShi+tZQR84uUVV1N1dW+slaBMJLJauCcTYPmp0vHLy
+        VGg+/QzqaUEomM5ZTA/Gz+Mm4uCePajkdlVk34aZ/rDRB5XcIqfTCRfn8KC5Gc/eRODYtGnhjkkf4trg
+        EbgzMhCKUeOQxcxhruv7LqLCw9FEg9XSB25mLTenjsCNjQ14+NiDxpYWPBcJrNZXCUzh4Uv0ny9Gxogx
+        SBs0AimDhkPROwAp/YcghYSqoaNxtG8/nFy1CpWs3MH3k52vECdJqqpeStTQ8pjwJLD9hyArNPQj1Zx5
+        kA0diZsETCe4vJc/oseMx9U+AZD5D4Z0yAhk8/4Bn244u2MH6jjUKspzn/JUi/qzi8ZWccQiga0zgX76
+        jN/yCC7tNwgqApWT5OikjxF9+hSurf4Bch8fqPoNROaQ93C3mx8uBo6HngZ71NCAhro6ND1q5iv7CZra
+        nnZNENrDd00tpXlAgAZWu390YG467Y6GRjxj27qDh+EeOAwu/0Go7d0faWHfoKa1xQvWVXDonsDAwM4z
+        mNOrz2q8PwF7e/qd9/HzGx576lSVJDa2SoiLtR8TBPv+oLnO5u7v4I+JEx+sP3TIduHixUohIcEeLyTY
+        +S/Dm0KSYL+pUNQdP3nSRMihL5H5Y8/sIV584Of3lZ+PzzBe9mK+K95jdGeK1wETevYM8/X1DeR1b2ZP
+        phji+X+nGOIZYvi8/Q9UBA7WCVn92gAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
